versions/v3.7.0/doxygen/html/globals_defs.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/doxygen/html/globals_defs.html
original_path: doxygen/html/globals_defs.html
---

| Logo | Zephyr API Documentation  3.7.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all macros with links to the files they belong to:

### - a -

- A2DP\_MAX\_IE\_LENGTH : [a2dp.h](a2dp_8h.md#ab42c7fe29752fb43bb573a752de9c693)
- A2DP\_SBC\_ALLOC\_MTHD\_LOUDNESS : [a2dp\_codec\_sbc.h](a2dp__codec__sbc_8h.md#a27d905ddf0fdb3dea4d3c12dd3ca33fe)
- A2DP\_SBC\_ALLOC\_MTHD\_SNR : [a2dp\_codec\_sbc.h](a2dp__codec__sbc_8h.md#a7e54f1c971e1fd63e52f0322e7f85105)
- A2DP\_SBC\_BLK\_LEN\_12 : [a2dp\_codec\_sbc.h](a2dp__codec__sbc_8h.md#a9890a0cb8a813e010855c10fc4d22bf8)
- A2DP\_SBC\_BLK\_LEN\_16 : [a2dp\_codec\_sbc.h](a2dp__codec__sbc_8h.md#a1cb9425713c325442652fb406557e52a)
- A2DP\_SBC\_BLK\_LEN\_4 : [a2dp\_codec\_sbc.h](a2dp__codec__sbc_8h.md#a3abfc1c5202d2659055fc3480c2d3cc2)
- A2DP\_SBC\_BLK\_LEN\_8 : [a2dp\_codec\_sbc.h](a2dp__codec__sbc_8h.md#aeb90df4a33ce9ebdfc38d873fd54abab)
- A2DP\_SBC\_CH\_MODE\_DUAL : [a2dp\_codec\_sbc.h](a2dp__codec__sbc_8h.md#aab5ab0b151f0a150c392be2f4cc82def)
- A2DP\_SBC\_CH\_MODE\_JOINT : [a2dp\_codec\_sbc.h](a2dp__codec__sbc_8h.md#afcf64fa599e4d820dccdf40990f5ba39)
- A2DP\_SBC\_CH\_MODE\_MONO : [a2dp\_codec\_sbc.h](a2dp__codec__sbc_8h.md#aa9b58737fa1561b684a20980ea0b6feb)
- A2DP\_SBC\_CH\_MODE\_STREO : [a2dp\_codec\_sbc.h](a2dp__codec__sbc_8h.md#acc5be684b75804f72a28d025fc5cc9bb)
- A2DP\_SBC\_SAMP\_FREQ\_16000 : [a2dp\_codec\_sbc.h](a2dp__codec__sbc_8h.md#a054dbbaf58ccc3b64142008e3da31ca5)
- A2DP\_SBC\_SAMP\_FREQ\_32000 : [a2dp\_codec\_sbc.h](a2dp__codec__sbc_8h.md#a8e4b5399fb5366770a42fd4dfeece220)
- A2DP\_SBC\_SAMP\_FREQ\_44100 : [a2dp\_codec\_sbc.h](a2dp__codec__sbc_8h.md#a57d7b85560b36603651fae6c055c32c6)
- A2DP\_SBC\_SAMP\_FREQ\_48000 : [a2dp\_codec\_sbc.h](a2dp__codec__sbc_8h.md#a0ebafbef2cddd4b6c7c7990ca77db0f9)
- A2DP\_SBC\_SUBBAND\_4 : [a2dp\_codec\_sbc.h](a2dp__codec__sbc_8h.md#ad5916cf243e40e5a674ceed13477023e)
- A2DP\_SBC\_SUBBAND\_8 : [a2dp\_codec\_sbc.h](a2dp__codec__sbc_8h.md#a6b4bd1ef891c14c4f863c9623dcb63f7)
- A53\_DOMAIN\_ID : [imx\_rdc.h](imx__rdc_8h.md#ad150e5ccb613174d8aadea285fd99a03)
- A6212\_ALERT\_TEMP\_MASK : [tmp108.h](tmp108_8h.md#aeb7ae5deef7c19daa33a7b90105f6e72)
- A7\_DOMAIN\_ID : [imx\_rdc.h](imx__rdc_8h.md#aac94244543640603434faa2862eb1eef)
- A9\_DOMAIN\_ID : [imx\_rdc.h](imx__rdc_8h.md#a2f961de9f7c100cf1ef6aa65cf40cd4f)
- A\_BIT : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#ae59e66b2ffaf088f18f894088f53205b)
- ACM\_FUNC\_DESC : [usb\_cdc.h](usb__cdc_8h.md#a057b9de28602442b66a8c3a7befd62a7)
- ACM\_SUBCLASS : [usb\_cdc.h](usb__cdc_8h.md#a01b7a28004a035df52334b64308e4b22)
- ACM\_VENDOR\_PROTOCOL : [usb\_cdc.h](usb__cdc_8h.md#a20396bb325a1e947b2e4b0017a134082)
- ACPI\_DMAR\_FLAG\_DMA\_CTRL\_PLATFORM\_OPT\_IN : [acpi.h](acpi_2acpi_8h.md#a695794eaf1ebfa25ed1c0ad0d42105f2)
- ACPI\_DMAR\_FLAG\_INTR\_REMAP : [acpi.h](acpi_2acpi_8h.md#a92085a7267a8f1569d6d836fc6f8459b)
- ACPI\_DMAR\_FLAG\_X2APIC\_OPT\_OUT : [acpi.h](acpi_2acpi_8h.md#a346ee226be8400feaf94198db3da4c44)
- ACPI\_DRHD\_FLAG\_INCLUDE\_PCI\_ALL : [acpi.h](acpi_2acpi_8h.md#a9f534875dab25e2ea48b2676ea8e71b8)
- ACPI\_DT\_HAS\_HID : [acpi.h](acpi_2acpi_8h.md#a9b849938061877cee953fd7257575268)
- ACPI\_DT\_HAS\_UID : [acpi.h](acpi_2acpi_8h.md#ad91001baf45a0110c85c51b405beaced)
- ACPI\_DT\_HID : [acpi.h](acpi_2acpi_8h.md#a76212438f3a5020919bfde46128f2fb4)
- ACPI\_DT\_UID : [acpi.h](acpi_2acpi_8h.md#a509335d1d6310b109a5047c5a65e1761)
- ACPI\_IO\_GET : [acpi.h](acpi_2acpi_8h.md#a0d45750fe126a6f9641f7f94d843381d)
- ACPI\_IRQ\_DETECT : [acpi.h](dt-bindings_2acpi_2acpi_8h.md#a8df7aea019c11e4d38d9e54d2b0c66e7)
- ACPI\_IRQ\_FLAG\_DETECT : [acpi.h](dt-bindings_2acpi_2acpi_8h.md#a5a1c80b043a1faef3959606005e4fd4b)
- ACPI\_MMIO\_GET : [acpi.h](acpi_2acpi_8h.md#a1f8ab630f3c98ceb0c9f59a78b9a24da)
- ACPI\_MULTI\_IO\_GET : [acpi.h](acpi_2acpi_8h.md#ad5adfc6540aa9118542970d76d6512bd)
- ACPI\_MULTI\_MMIO\_GET : [acpi.h](acpi_2acpi_8h.md#af131fc0845a57664d8df8983c074c064)
- ACPI\_MULTI\_RESOURCE\_SIZE\_GET : [acpi.h](acpi_2acpi_8h.md#ac77fc44c979b87bcb571f77657954d99)
- ACPI\_MULTI\_RESOURCE\_TYPE\_GET : [acpi.h](acpi_2acpi_8h.md#a1e50c8e8f08f6bab0ed12ad97f573b0f)
- ACPI\_RES\_INVALID : [acpi.h](acpi_2acpi_8h.md#a5de2990466b70b703d48c6c341e427b3)
- ACPI\_RESOURCE\_COUNT\_GET : [acpi.h](acpi_2acpi_8h.md#ac174fef6e234ec8452485c199d9de90d)
- ACPI\_RESOURCE\_SIZE\_GET : [acpi.h](acpi_2acpi_8h.md#abc9aa4017edfc68ac47208e8f758dd60)
- ACPI\_RESOURCE\_TYPE\_GET : [acpi.h](acpi_2acpi_8h.md#aa822c0ca234e1b3ea5fc0007c9f490d4)
- ACTLR\_EL3\_CPUACTLR\_BIT : [cpu.h](arm64_2cpu_8h.md#ac50b16ec53bcc4bdf8e7aef09cb335bf)
- ACTLR\_EL3\_CPUECTLR\_BIT : [cpu.h](arm64_2cpu_8h.md#a685f4f4eaee539caa215a539c7f14c74)
- ACTLR\_EL3\_L2ACTLR\_BIT : [cpu.h](arm64_2cpu_8h.md#ae1d807d116307b1321d75ed0917f912d)
- ACTLR\_EL3\_L2CTLR\_BIT : [cpu.h](arm64_2cpu_8h.md#a7be92abd63f3a3915495f497460bc89b)
- ACTLR\_EL3\_L2ECTLR\_BIT : [cpu.h](arm64_2cpu_8h.md#a73da30b946e047bf4b736deb26270571)
- AD559X\_EN\_REF : [ad559x.h](ad559x_8h.md#a8db6c5c634f572cfca2bcb2e2f2cdb73)
- AD559X\_PIN\_MAX : [ad559x.h](ad559x_8h.md#a24da8b1b01da9473bcf1b953727ead1e)
- AD559X\_REG\_ADC\_CONFIG : [ad559x.h](ad559x_8h.md#a7a588e6ec9e98cd0530a55414fcc63de)
- AD559X\_REG\_GPIO\_INPUT\_EN : [ad559x.h](ad559x_8h.md#a1b1049f7ab7e768d286e3b599a72745d)
- AD559X\_REG\_GPIO\_OUTPUT\_EN : [ad559x.h](ad559x_8h.md#a55717b95bfb5f4d6218dcaa22ce597f8)
- AD559X\_REG\_GPIO\_PULLDOWN : [ad559x.h](ad559x_8h.md#a843ed93d660cfe363f4b682bd6a574a2)
- AD559X\_REG\_GPIO\_SET : [ad559x.h](ad559x_8h.md#a257a2ffecc969740e9a15231e05c74d4)
- AD559X\_REG\_LDAC\_EN : [ad559x.h](ad559x_8h.md#a513c0ed1982f51edb294ce3c07d92c8f)
- AD559X\_REG\_PD\_REF\_CTRL : [ad559x.h](ad559x_8h.md#a79a840afe34154908a59e64e7c8526de)
- AD559X\_REG\_READ\_AND\_LDAC : [ad559x.h](ad559x_8h.md#a9f90d05e96f8bf8170d2d461019f71b4)
- AD559X\_REG\_SEQ\_ADC : [ad559x.h](ad559x_8h.md#ade40e7e134b45f33b22758fed430d786)
- ADC12\_SEL : [stm32g4\_clock.h](stm32g4__clock_8h.md#a937fbb74cf970ef8033c16c68b27400f)
- ADC34\_SEL : [stm32g4\_clock.h](stm32g4__clock_8h.md#a783a036bee08f7f5ef9c556816d7441f)
- ADC\_0\_PIO1\_9 : [lpc11u6x-pinctrl.h](lpc11u6x-pinctrl_8h.md#a03ce0c70811dc7195ee48649532f2ebd)
- ADC\_10\_PIO1\_29 : [lpc11u6x-pinctrl.h](lpc11u6x-pinctrl_8h.md#a15dfb4021a3db0723c8918d89840f569)
- ADC\_11\_PIO0\_22 : [lpc11u6x-pinctrl.h](lpc11u6x-pinctrl_8h.md#aafede8fcd15e8bfe236e95c9a7b49b96)
- ADC\_1\_PIO0\_23 : [lpc11u6x-pinctrl.h](lpc11u6x-pinctrl_8h.md#ab00e7a1a150e2e1c9b45d86c850a4a0b)
- ADC\_2\_PIO0\_16 : [lpc11u6x-pinctrl.h](lpc11u6x-pinctrl_8h.md#a21eeb0732f5d35d747f63db3eac9cfad)
- ADC\_3\_PIO0\_15 : [lpc11u6x-pinctrl.h](lpc11u6x-pinctrl_8h.md#af92fd1b534c099ad808403a199cad8a0)
- ADC\_4\_PIO1\_22 : [lpc11u6x-pinctrl.h](lpc11u6x-pinctrl_8h.md#a9686cbbd0389bec5c771f2776f05cde7)
- ADC\_5\_PIO1\_3 : [lpc11u6x-pinctrl.h](lpc11u6x-pinctrl_8h.md#ac4f0bd23dfc3f744220cadb6949d4e1f)
- ADC\_6\_PIO0\_14 : [lpc11u6x-pinctrl.h](lpc11u6x-pinctrl_8h.md#ae6c3bb89b08367707e91bb00d3f55da5)
- ADC\_7\_PIO0\_13 : [lpc11u6x-pinctrl.h](lpc11u6x-pinctrl_8h.md#a706b80599c77ce5212b2359187d3fab1)
- ADC\_8\_PIO0\_12 : [lpc11u6x-pinctrl.h](lpc11u6x-pinctrl_8h.md#ae9f30a9545a11701304231e5efb707a5)
- ADC\_9\_PIO0\_11 : [lpc11u6x-pinctrl.h](lpc11u6x-pinctrl_8h.md#abfeca937f748f0b54ee4178c072ed1f5)
- ADC\_ACQ\_TIME : [adc.h](dt-bindings_2adc_2adc_8h.md#a313a316cb91adcef0125679220efe2b7)
- ADC\_ACQ\_TIME\_DEFAULT : [adc.h](dt-bindings_2adc_2adc_8h.md#a3f0840d3d6300e9c26be1b2889ecbd54)
- ADC\_ACQ\_TIME\_MAX : [adc.h](dt-bindings_2adc_2adc_8h.md#a5c89f077922d9b84229b5525f5408ebe)
- ADC\_ACQ\_TIME\_MICROSECONDS : [adc.h](dt-bindings_2adc_2adc_8h.md#aa80dca07e438ccb1c4f45b9a8052f44e)
- ADC\_ACQ\_TIME\_NANOSECONDS : [adc.h](dt-bindings_2adc_2adc_8h.md#a1d7580e098809a5ba2dec139a05af988)
- ADC\_ACQ\_TIME\_TICKS : [adc.h](dt-bindings_2adc_2adc_8h.md#acff5af9f7a7b49bbfeab1b6716c7c18f)
- ADC\_ACQ\_TIME\_UNIT : [adc.h](dt-bindings_2adc_2adc_8h.md#ae66e4a40b8e4b1e34c68b806363b95cf)
- ADC\_ACQ\_TIME\_VALUE : [adc.h](dt-bindings_2adc_2adc_8h.md#a720640550d3a29e0181819ec31d5dda6)
- ADC\_CH0\_P26 : [rpi-pico-rp2040-pinctrl.h](rpi-pico-rp2040-pinctrl_8h.md#a6ab3748b716a2c39ff7e0e78afec3bdf)
- ADC\_CH1\_P27 : [rpi-pico-rp2040-pinctrl.h](rpi-pico-rp2040-pinctrl_8h.md#a237c44c257ad8b0c7d15bca6f83e2b75)
- ADC\_CH2\_P28 : [rpi-pico-rp2040-pinctrl.h](rpi-pico-rp2040-pinctrl_8h.md#a8bf50dbc36c4a534e26159c8a961a18c)
- ADC\_CH3\_P29 : [rpi-pico-rp2040-pinctrl.h](rpi-pico-rp2040-pinctrl_8h.md#ad2ab3e2ede7b0c85b17387eddbbc97ed)
- ADC\_CHANNEL\_CFG\_DT : [adc.h](group__adc__interface.md#ga8d1f7d55c94fed3247c830a4569ab05e)
- ADC\_DT\_SPEC\_GET : [adc.h](group__adc__interface.md#gad05df3d329ba785c094ea4c32e2913b7)
- ADC\_DT\_SPEC\_GET\_BY\_IDX : [adc.h](group__adc__interface.md#gae9867df7a034d45ed3d3c58c69c246ed)
- ADC\_DT\_SPEC\_GET\_BY\_NAME : [adc.h](group__adc__interface.md#ga058dbc619b7bbf624cd48518b429bb58)
- ADC\_DT\_SPEC\_INST\_GET : [adc.h](group__adc__interface.md#ga96222a7d374e21d477b99f74d715bae1)
- ADC\_DT\_SPEC\_INST\_GET\_BY\_IDX : [adc.h](group__adc__interface.md#ga4705a1e2cc22fe73b7e967e8ba220584)
- ADC\_DT\_SPEC\_INST\_GET\_BY\_NAME : [adc.h](group__adc__interface.md#ga48139728bd2cec25208ef37d9bbcc34f)
- ADC\_SEL : [stm32c0\_clock.h](stm32c0__clock_8h.md#a635d17ad991ded52d41a6e7b0bec5773), [stm32g0\_clock.h](stm32g0__clock_8h.md#a635d17ad991ded52d41a6e7b0bec5773), [stm32h7\_clock.h](stm32h7__clock_8h.md#a635d17ad991ded52d41a6e7b0bec5773), [stm32h7rs\_clock.h](stm32h7rs__clock_8h.md#a635d17ad991ded52d41a6e7b0bec5773), [stm32l4\_clock.h](stm32l4__clock_8h.md#a635d17ad991ded52d41a6e7b0bec5773), [stm32wb\_clock.h](stm32wb__clock_8h.md#a635d17ad991ded52d41a6e7b0bec5773), [stm32wba\_clock.h](stm32wba__clock_8h.md#a635d17ad991ded52d41a6e7b0bec5773), [stm32wl\_clock.h](stm32wl__clock_8h.md#a635d17ad991ded52d41a6e7b0bec5773)
- ADCD0NSE9\_P12 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#a994b602fed3f5de352a97b9cc9c62607)
- ADCD0PSE8\_P13 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#a5c9489a135b6531852d4ebdfc5154f22)
- ADCD1N\_P15 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#ad4979ef8e737edc9304425cbff550802)
- ADCD1P\_P14 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#a116b6aa61f2ad957c6e205c73b447a1e)
- ADCDAC\_SEL : [stm32h5\_clock.h](stm32h5__clock_8h.md#a454d6254cea3749ac4502fb51739e27c), [stm32u5\_clock.h](stm32u5__clock_8h.md#a454d6254cea3749ac4502fb51739e27c)
- ADCSE0\_P16 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#add33549cde84fd881439b438becb5e33)
- ADCSE0\_P19 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aa330f5f3b31003e45049beadcd4637fa)
- ADCSE1\_P18 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a8881b3e9c0c3ddf1bb99ad1eb93fbc6d)
- ADCSE1\_P29 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#aa3f68e46605f8425448a99ba37eadcb9)
- ADCSE2\_P11 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#a0af7147f664fc0c56acdfc63e76558bc)
- ADCSE2\_P17 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aeec6ebbab4daa604f39069d8f4f4c8bd)
- ADCSE3\_P16 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a18ae21d0fe862b05c6df490a45168581)
- ADCSE3\_P31 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#a6e98f43cdc78b15346036a660fa28e5c)
- ADCSE4\_P15 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a5b32fbcf64f253108c32cc00d1c553c6)
- ADCSE4\_P32 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#a3a527375ccd62e5f8a761f1942adbcc8)
- ADCSE5\_P14 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ae41e0ec777697773a0ad22e174d46d00)
- ADCSE5\_P33 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#ac774e90f430510b182a016ba09661ed0)
- ADCSE6\_P13 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#adb7003240592a4deb555a42bb235995f)
- ADCSE6\_P34 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#a5ee25464af430f33bcb61e9ae711d9a3)
- ADCSE7\_P12 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a62e8082b44b7aa372783ebcfab497ebe)
- ADCSE7\_P35 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#ae609e68dba89b9c84fc3e6a4a3e29e67)
- ADDR\_TRANSLATE\_MAX\_REGIONS : [rat.h](rat_8h.md#a6fbe67ecd2ee230303753783d8d4d51b)
- addrinfo : [socket.h](group__bsd__sockets.md#gaf6bd8540206fe6379df889064f4a9748), [netdb.h](netdb_8h.md#af6bd8540206fe6379df889064f4a9748)
- ADF1\_SEL : [stm32u5\_clock.h](stm32u5__clock_8h.md#a2965fce3cbae0a73506ddf383c78783f)
- ADFSDM\_SEL : [stm32l4\_clock.h](stm32l4__clock_8h.md#a7a9e2b88955eab5d77438aa9f3ef84b8)
- ADI\_MAX32\_CLK\_ERFO\_FREQ : [adi\_max32\_clock\_control.h](adi__max32__clock__control_8h.md#a56a549a210a78cb99f019f85fa15807b)
- ADI\_MAX32\_CLK\_ERTCO\_FREQ : [adi\_max32\_clock\_control.h](adi__max32__clock__control_8h.md#a664282617e29d44f951a48da1ac1ae9d)
- ADI\_MAX32\_CLK\_EXTCLK\_FREQ : [adi\_max32\_clock\_control.h](adi__max32__clock__control_8h.md#a158271c4ced07ddeda9e677f7fd028c7)
- ADI\_MAX32\_CLK\_IBRO\_FREQ : [adi\_max32\_clock\_control.h](adi__max32__clock__control_8h.md#ae5e0473609734b17bcdd2ce6f4e7a63a)
- ADI\_MAX32\_CLK\_INRO\_FREQ : [adi\_max32\_clock\_control.h](adi__max32__clock__control_8h.md#abb3947e441021737ca566e89fd56cb0c)
- ADI\_MAX32\_CLK\_IPO\_FREQ : [adi\_max32\_clock\_control.h](adi__max32__clock__control_8h.md#a31a7fbb2f0c1ce1f5b9899b49b6324ec)
- ADI\_MAX32\_CLK\_ISO\_FREQ : [adi\_max32\_clock\_control.h](adi__max32__clock__control_8h.md#ace96ad0d7564ad0fe326992257686820)
- ADI\_MAX32\_CLOCK\_BUS0 : [adi\_max32\_clock.h](adi__max32__clock_8h.md#afe3578f3122163009070220def865b17)
- ADI\_MAX32\_CLOCK\_BUS1 : [adi\_max32\_clock.h](adi__max32__clock_8h.md#a5b6d4b5a184d286e2353adc8fec22d94)
- ADI\_MAX32\_CLOCK\_BUS2 : [adi\_max32\_clock.h](adi__max32__clock_8h.md#ad6f25e814a9f2d91c4050cfd4db96975)
- ADI\_MAX32\_GET\_PRPH\_CLK\_FREQ : [adi\_max32\_clock\_control.h](adi__max32__clock__control_8h.md#abc5b92548642b17cb955d1f6b1949726)
- ADI\_MAX32\_PCLK\_FREQ : [adi\_max32\_clock\_control.h](adi__max32__clock__control_8h.md#a4e3ca6232db9220b60f17d1dca74627f)
- ADI\_MAX32\_PRPH\_CLK\_SRC\_ERFO : [adi\_max32\_clock.h](adi__max32__clock_8h.md#af9ad74e5aff66314ef7ea4bcbd58a12f)
- ADI\_MAX32\_PRPH\_CLK\_SRC\_ERTCO : [adi\_max32\_clock.h](adi__max32__clock_8h.md#ae22725273956cf339a7aa1ab99ec9d64)
- ADI\_MAX32\_PRPH\_CLK\_SRC\_EXTCLK : [adi\_max32\_clock.h](adi__max32__clock_8h.md#a6bc3da20a61d735c15894c7cb7f6fb88)
- ADI\_MAX32\_PRPH\_CLK\_SRC\_IBRO : [adi\_max32\_clock.h](adi__max32__clock_8h.md#a0ec9e4fb6e4522325b7c26b1aa6ff4ae)
- ADI\_MAX32\_PRPH\_CLK\_SRC\_IBRO\_DIV8 : [adi\_max32\_clock.h](adi__max32__clock_8h.md#a79b4ec22a2ad744b20511fd72f00b88b)
- ADI\_MAX32\_PRPH\_CLK\_SRC\_INRO : [adi\_max32\_clock.h](adi__max32__clock_8h.md#ad6039fb9117f11753b062ce70ab6086c)
- ADI\_MAX32\_PRPH\_CLK\_SRC\_ISO : [adi\_max32\_clock.h](adi__max32__clock_8h.md#a7cc83f5e0a532b4f59909167562042f0)
- ADI\_MAX32\_PRPH\_CLK\_SRC\_PCLK : [adi\_max32\_clock.h](adi__max32__clock_8h.md#ad28575fff49c4cb3c4b8c4180cd387de)
- ADI\_MAX32\_SYSCLK\_FREQ : [adi\_max32\_clock\_control.h](adi__max32__clock__control_8h.md#ac82b515b2268a26b19b69972fc113e1c)
- ADI\_MAX32\_SYSCLK\_PRESCALER : [adi\_max32\_clock\_control.h](adi__max32__clock__control_8h.md#a41eab4d492a019700d1e1d4714932cd9)
- ADI\_MAX32\_SYSCLK\_SRC : [adi\_max32\_clock\_control.h](adi__max32__clock__control_8h.md#a21d5bba4fce8bf21105689ae8ea96216)
- ADP5360\_MODE\_HYS : [adp5360.h](group__regulator__adp5360.md#gae2cf6777a5ff129d6fda7200b581e7c5)
- ADP5360\_MODE\_PWM : [adp5360.h](group__regulator__adp5360.md#gab23bd874d4ad25543a728bd0b5d03ced)
- ADP5585\_DEBOUNCE\_DIS\_A : [adp5585.h](adp5585_8h.md#a4712d02875b88c125b1e25c746440a31)
- ADP5585\_DEBOUNCE\_DIS\_B : [adp5585.h](adp5585_8h.md#ac907fc30a58a7ff2d91a69c1c87594c6)
- ADP5585\_DEVICE\_ID\_MASK : [adp5585.h](adp5585_8h.md#a5b090f56fa476d7cca2f6899135229f8)
- ADP5585\_FIFO\_1 : [adp5585.h](adp5585_8h.md#afa83f7aace2fd46cf64e559bed0b11f0)
- ADP5585\_FIFO\_10 : [adp5585.h](adp5585_8h.md#a96c863ab3cf6d2167ad671fae97ddf18)
- ADP5585\_FIFO\_11 : [adp5585.h](adp5585_8h.md#a053caf41bbaa3cbd93c12439f14e5d47)
- ADP5585\_FIFO\_12 : [adp5585.h](adp5585_8h.md#a53716a13d1d427397915b3a3cbb34b2c)
- ADP5585\_FIFO\_13 : [adp5585.h](adp5585_8h.md#ac57c89eff3b3cadd5ed3d0a73040c21f)
- ADP5585\_FIFO\_14 : [adp5585.h](adp5585_8h.md#ac5c9f36e90531803c38d5096649638a3)
- ADP5585\_FIFO\_15 : [adp5585.h](adp5585_8h.md#a55ddf942d0a7636f28d9a67e4bd01377)
- ADP5585\_FIFO\_16 : [adp5585.h](adp5585_8h.md#a4a106aa7ac374e1b7234de740f062315)
- ADP5585\_FIFO\_2 : [adp5585.h](adp5585_8h.md#a72d2335efa6fbabe89f1844b8bec2f70)
- ADP5585\_FIFO\_3 : [adp5585.h](adp5585_8h.md#a764a0a9a8b8ab3efabe00e547eb1dfea)
- ADP5585\_FIFO\_4 : [adp5585.h](adp5585_8h.md#a7e09ac2966e14165e9d1da7e8ad4b3f2)
- ADP5585\_FIFO\_5 : [adp5585.h](adp5585_8h.md#a41b6a6efcce33c063712d13f878f758c)
- ADP5585\_FIFO\_6 : [adp5585.h](adp5585_8h.md#a2e780a11e8498724fa6a169c86f6492b)
- ADP5585\_FIFO\_7 : [adp5585.h](adp5585_8h.md#a3e1738db835ff08fa2116145b16f0fa4)
- ADP5585\_FIFO\_8 : [adp5585.h](adp5585_8h.md#a5a60166191e51b418a80123e0bbf47c4)
- ADP5585\_FIFO\_9 : [adp5585.h](adp5585_8h.md#a49471e825aa64dbdd117dbf8f0a7cf5d)
- ADP5585\_GENERAL\_CFG : [adp5585.h](adp5585_8h.md#accaa4211d0b1dbd645652ed279d62557)
- ADP5585\_GENERAL\_CFG\_OSC\_EN : [adp5585.h](adp5585_8h.md#ab681a5188091e9a2443a622021bb560c)
- ADP5585\_GPI\_EVENT\_EN\_A : [adp5585.h](adp5585_8h.md#ad079e787ca2988308623a29ce238002b)
- ADP5585\_GPI\_EVENT\_EN\_B : [adp5585.h](adp5585_8h.md#a05059407f14853547d2d5e2d572e3efa)
- ADP5585\_GPI\_INT\_LEVEL\_A : [adp5585.h](adp5585_8h.md#a67bad2472c7e78cf9e12c79550a882b9)
- ADP5585\_GPI\_INT\_LEVEL\_B : [adp5585.h](adp5585_8h.md#acc6fe6801de4102c2eaf841a9c42f3bd)
- ADP5585\_GPI\_INT\_STAT\_A : [adp5585.h](adp5585_8h.md#a969cbf249f8e61e004c03b9ad7a7f01a)
- ADP5585\_GPI\_INT\_STAT\_B : [adp5585.h](adp5585_8h.md#a9cd52a6ab5a30a221f5b57c42845f366)
- ADP5585\_GPI\_INTERRUPT\_EN\_A : [adp5585.h](adp5585_8h.md#acc0487d4ed5b3321e5e7477e2e7069b0)
- ADP5585\_GPI\_INTERRUPT\_EN\_B : [adp5585.h](adp5585_8h.md#a7623e23c6e768028be5df6567234ea32)
- ADP5585\_GPI\_STATUS\_A : [adp5585.h](adp5585_8h.md#a30acc2f2100514223ae1a1745f9c3c7b)
- ADP5585\_GPI\_STATUS\_B : [adp5585.h](adp5585_8h.md#a96ad72c5cb57c33d2949446e5243bae0)
- ADP5585\_GPIO\_DIRECTION\_A : [adp5585.h](adp5585_8h.md#afe9637fe22334d0014bdd65c71a743eb)
- ADP5585\_GPIO\_DIRECTION\_B : [adp5585.h](adp5585_8h.md#aec18185b14f96c0d8f7d05ea5f2b7db8)
- ADP5585\_GPO\_DATA\_OUT\_A : [adp5585.h](adp5585_8h.md#a9daac58d194d0db90caad7a3e0efba96)
- ADP5585\_GPO\_DATA\_OUT\_B : [adp5585.h](adp5585_8h.md#a4c3152925821be1bd99172d7e9a98dab)
- ADP5585\_GPO\_OUT\_MODE\_A : [adp5585.h](adp5585_8h.md#a4d16b97199e23781b31a1903e9b26ae8)
- ADP5585\_GPO\_OUT\_MODE\_B : [adp5585.h](adp5585_8h.md#a09edb76ab453c790bc7ba70544d1bbea)
- ADP5585\_ID : [adp5585.h](adp5585_8h.md#afbd61635aa229f364824b9e84e96c7fa)
- ADP5585\_INT\_EN : [adp5585.h](adp5585_8h.md#a6b4c4ba659f9414747b0ae06bc0cdcfd)
- ADP5585\_INT\_EVENT : [adp5585.h](adp5585_8h.md#a4ba78a1afbbb7df3c945e07c45685717)
- ADP5585\_INT\_GPI : [adp5585.h](adp5585_8h.md#a4aad6f3752b5b76f2f6f4ec5c03c0dcb)
- ADP5585\_INT\_LOGIC : [adp5585.h](adp5585_8h.md#ab38755ce29cc619bb163a327eafc48e9)
- ADP5585\_INT\_OVERFLOW : [adp5585.h](adp5585_8h.md#ad362d9d20ead42061bf577a75ae92107)
- ADP5585\_INT\_STATUS : [adp5585.h](adp5585_8h.md#a0a6c9fc68d3bc48ec43a4a27c7f973dd)
- ADP5585\_LOGIC\_CFG : [adp5585.h](adp5585_8h.md#a3cd8ec997df5e5425613e20e5fa240c6)
- ADP5585\_LOGIC\_FF\_CFG : [adp5585.h](adp5585_8h.md#a6944520e4d0b1187b4dea91f6c1adc10)
- ADP5585\_LOGIC\_INT\_EVENT\_EN : [adp5585.h](adp5585_8h.md#a370f09e02a005f200784f830fec3591f)
- ADP5585\_MAN\_ID : [adp5585.h](adp5585_8h.md#a372daeaedd3583aea797089b37fbe5c0)
- ADP5585\_MAN\_ID\_MASK : [adp5585.h](adp5585_8h.md#a3668ae7400564896daa2c609f8c4a594)
- ADP5585\_MAN\_ID\_SHIFT : [adp5585.h](adp5585_8h.md#ac3364a58902030fbec498761fc442ffe)
- ADP5585\_PIN\_CONFIG\_A : [adp5585.h](adp5585_8h.md#ab657ba2f5015a956c3dd5d928684c98c)
- ADP5585\_PIN\_CONFIG\_B : [adp5585.h](adp5585_8h.md#a3b730343c76b05b7ea6ef5fe69f2e819)
- ADP5585\_PIN\_CONFIG\_C : [adp5585.h](adp5585_8h.md#a9abe95d8b24f41002df9318710b7e834)
- ADP5585\_PIN\_CONFIG\_R3\_MASK : [adp5585.h](adp5585_8h.md#a33ad97c1ffb9cc9a820f0609dfc76087)
- ADP5585\_PIN\_CONFIG\_R3\_PWM : [adp5585.h](adp5585_8h.md#aa04ec62322c733d66ee37303d29d03f4)
- ADP5585\_POLL\_PTIME\_CFG : [adp5585.h](adp5585_8h.md#a5c3dba7ca9da0b4df5ad2afcf4bcae5e)
- ADP5585\_PWM\_CFG : [adp5585.h](adp5585_8h.md#a1de2da958c6db64a34a2de1fa6ffddba)
- ADP5585\_PWM\_CFG\_EN : [adp5585.h](adp5585_8h.md#a7371eba2de343b1c26e0c1ea8119eb32)
- ADP5585\_PWM\_CFG\_MODE : [adp5585.h](adp5585_8h.md#a0e4cbfb9cb957805c16e94d19e0420fd)
- ADP5585\_PWM\_OFFT\_HIGH : [adp5585.h](adp5585_8h.md#ae4c576fc2d0efcf137c6530326ead1be)
- ADP5585\_PWM\_OFFT\_LOW : [adp5585.h](adp5585_8h.md#a23a8f65d404b7c0bafd55858858afa96)
- ADP5585\_PWM\_ONT\_HIGH : [adp5585.h](adp5585_8h.md#a7bf28da865492a8c496613338a55933e)
- ADP5585\_PWM\_ONT\_LOW : [adp5585.h](adp5585_8h.md#a74fa6f7378722a569c298394ca2c3b36)
- ADP5585\_REG\_MASK : [adp5585.h](adp5585_8h.md#a7d65da027f146e0ec4c574becb014e43)
- ADP5585\_RESET1\_EVENT\_A : [adp5585.h](adp5585_8h.md#a73dcbcf77052ad254453422edea750ef)
- ADP5585\_RESET1\_EVENT\_B : [adp5585.h](adp5585_8h.md#ab73730cdd193626c32a2ec34eabcf3c9)
- ADP5585\_RESET1\_EVENT\_C : [adp5585.h](adp5585_8h.md#af8ee993d6eef733634f4d06953456284)
- ADP5585\_RESET2\_EVENT\_A : [adp5585.h](adp5585_8h.md#a4a6c163e0c60a590ac0311336159a76b)
- ADP5585\_RESET2\_EVENT\_B : [adp5585.h](adp5585_8h.md#ab4368b4309e193c178b70a0f56a8d82e)
- ADP5585\_RESET\_CFG : [adp5585.h](adp5585_8h.md#a94eecacd78ca46744f5672c5d042ff07)
- ADP5585\_RPULL\_CONFIG\_A : [adp5585.h](adp5585_8h.md#a8367cd959eaff77e026fc90521889b84)
- ADP5585\_RPULL\_CONFIG\_B : [adp5585.h](adp5585_8h.md#ae76fa8a7688f59df166bf816ea9d472b)
- ADP5585\_RPULL\_CONFIG\_C : [adp5585.h](adp5585_8h.md#ae3692e46404852668e15e60387c76e86)
- ADP5585\_RPULL\_CONFIG\_D : [adp5585.h](adp5585_8h.md#a7dd9182b40ed99cd14f988cc781d9413)
- ADP5585\_STATUS : [adp5585.h](adp5585_8h.md#a40d6f40ae61983958ae73d09eff68718)
- ADS114S0X\_CONFIG\_DR\_10 : [ads114s0x\_adc.h](ads114s0x__adc_8h.md#afaff90a42afaa0155a8dfd1216a69200)
- ADS114S0X\_CONFIG\_DR\_100 : [ads114s0x\_adc.h](ads114s0x__adc_8h.md#a67c5355b145edef1afc7a71aa486db68)
- ADS114S0X\_CONFIG\_DR\_1000 : [ads114s0x\_adc.h](ads114s0x__adc_8h.md#a95f125ba2942904e9ff17c127389e483)
- ADS114S0X\_CONFIG\_DR\_16\_6 : [ads114s0x\_adc.h](ads114s0x__adc_8h.md#a3fa63df42da39e5eb23ba1a4cea29cee)
- ADS114S0X\_CONFIG\_DR\_20 : [ads114s0x\_adc.h](ads114s0x__adc_8h.md#a1d2fc728391282dd803cdfab39c6b959)
- ADS114S0X\_CONFIG\_DR\_200 : [ads114s0x\_adc.h](ads114s0x__adc_8h.md#a08a7ffe33f66f9ffbed44289170e13b4)
- ADS114S0X\_CONFIG\_DR\_2000 : [ads114s0x\_adc.h](ads114s0x__adc_8h.md#af519f149785b8d9f1f32fb856d8da980)
- ADS114S0X\_CONFIG\_DR\_2\_5 : [ads114s0x\_adc.h](ads114s0x__adc_8h.md#a63d2607dad45e0c93c24024afd17984f)
- ADS114S0X\_CONFIG\_DR\_400 : [ads114s0x\_adc.h](ads114s0x__adc_8h.md#ad6f0a3e7626c5cdc2ab9be2e7447e711)
- ADS114S0X\_CONFIG\_DR\_4000 : [ads114s0x\_adc.h](ads114s0x__adc_8h.md#afe24757c440118b944b4e576f129fcd2)
- ADS114S0X\_CONFIG\_DR\_5 : [ads114s0x\_adc.h](ads114s0x__adc_8h.md#a2ebf92947499d72f98c2a0aefc84dbfa)
- ADS114S0X\_CONFIG\_DR\_50 : [ads114s0x\_adc.h](ads114s0x__adc_8h.md#ac0ebb3a750e8739c971011e0e394d9d0)
- ADS114S0X\_CONFIG\_DR\_60 : [ads114s0x\_adc.h](ads114s0x__adc_8h.md#a428627c59d347de8d8fb4ff8416fcac3)
- ADS114S0X\_CONFIG\_DR\_800 : [ads114s0x\_adc.h](ads114s0x__adc_8h.md#a278acddf851638a9e5abdc1fed2cc017)
- AES\_INTR\_SOURCE : [esp-esp32c3-intmux.h](esp-esp32c3-intmux_8h.md#ad793803f54262a4dcf6b14140e9dc22b), [esp-esp32c6-intmux.h](esp-esp32c6-intmux_8h.md#ad793803f54262a4dcf6b14140e9dc22b), [esp32s2-xtensa-intmux.h](esp32s2-xtensa-intmux_8h.md#ad793803f54262a4dcf6b14140e9dc22b), [esp32s3-xtensa-intmux.h](esp32s3-xtensa-intmux_8h.md#ad793803f54262a4dcf6b14140e9dc22b)
- AF\_CAN : [net\_ip.h](group__ip__4__6.md#ga546620c7e758f003b24b7fdae4f97bd4)
- AF\_INET : [net\_ip.h](group__ip__4__6.md#ga9930604d0e32588eae76f43ca38e7826)
- AF\_INET6 : [net\_ip.h](group__ip__4__6.md#gaa03706b2738b9a58d4985dfbe99e1bac)
- AF\_LOCAL : [net\_ip.h](group__ip__4__6.md#gae24f1f9ea44fcce3affcb2137f593dc1)
- AF\_NET\_MGMT : [net\_ip.h](group__ip__4__6.md#ga41d0cbb55cd9550a7f732b1520119c15)
- AF\_PACKET : [net\_ip.h](group__ip__4__6.md#gaa89aa4cd481fe17260c3f5d493cc23f5)
- AF\_UNIX : [net\_ip.h](group__ip__4__6.md#ga0fd8739854bc8b48d65f0b669fed3ffe)
- AF\_UNSPEC : [net\_ip.h](group__ip__4__6.md#gae77ae24b14b7b7f294f3e04121173f12)
- AI\_ADDRCONFIG : [socket.h](group__bsd__sockets.md#gabe581892df09df05b21fee09e1584659)
- AI\_ALL : [socket.h](group__bsd__sockets.md#ga1813fe6d7b10af5ea92ec03bd65ca39d)
- AI\_CANONNAME : [socket.h](group__bsd__sockets.md#gab2912e6cffeb2353df550f10bbe64cf4)
- AI\_EXTFLAGS : [socket.h](group__bsd__sockets.md#gafa6a0d2cd24a32d15acee17c3714ae0b)
- AI\_NUMERICHOST : [socket.h](group__bsd__sockets.md#ga2a7070b38894743c536630b2ab25dcef)
- AI\_NUMERICSERV : [socket.h](group__bsd__sockets.md#ga8739abe7bcb9470bcdb021e869b2a76f)
- AI\_PASSIVE : [socket.h](group__bsd__sockets.md#gaec9e92ed53442d64cbc9b68d92ad970b)
- AI\_V4MAPPED : [socket.h](group__bsd__sockets.md#gabbc1e064042dab1058c40d9cd1fc63f0)
- AIO\_LISTIO\_MAX : [posix\_features.h](posix__features_8h.md#a0b4029afb1dcaf401c08b7b147d00cec)
- AIO\_MAX : [posix\_features.h](posix__features_8h.md#a0889d4ed1489519e1e8a83ca6f212c5a)
- AIO\_PRIO\_DELTA\_MAX : [posix\_features.h](posix__features_8h.md#aa9d8b79923c4fc549c074fc387ef65c9)
- ALTERNATE : [stm32f1-pinctrl.h](stm32f1-pinctrl_8h.md#ac7190c598c8618207180d135c0650dac)
- ALWAYS\_INLINE : [common.h](common_8h.md#aa1dec568e79152c892dcf63f445cbd7a)
- ANALOG : [stm32f1-pinctrl.h](stm32f1-pinctrl_8h.md#ad42aa2404559d4a465d5d45e857f2881)
- ANATEST1\_P19 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a4af84142986af9004f682cfb85a65ecf)
- ANATEST2\_P18 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a737f3e858868beb587b9768f55261a92)
- ANTSEL1\_P29 : [ti-cc32xx-pinctrl.h](ti-cc32xx-pinctrl_8h.md#ae4b7bd32af0c430944caa10343c7ba89)
- ANTSEL2\_P30 : [ti-cc32xx-pinctrl.h](ti-cc32xx-pinctrl_8h.md#a637bd5bc2080ed718ed875255907ab81)
- APB\_ADC\_INTR\_SOURCE : [esp-esp32c3-intmux.h](esp-esp32c3-intmux_8h.md#a68b408eb63057838c64c51718c5b1f7f), [esp-esp32c6-intmux.h](esp-esp32c6-intmux_8h.md#a68b408eb63057838c64c51718c5b1f7f), [esp32s2-xtensa-intmux.h](esp32s2-xtensa-intmux_8h.md#a68b408eb63057838c64c51718c5b1f7f), [esp32s3-xtensa-intmux.h](esp32s3-xtensa-intmux_8h.md#a68b408eb63057838c64c51718c5b1f7f)
- APB\_CTRL\_INTR\_SOURCE : [esp-esp32c3-intmux.h](esp-esp32c3-intmux_8h.md#ab2acf6e0b0eb1f7ea85f0910f90326dc)
- APB\_PERI\_ERROR\_INTR\_SOURCE : [esp32s2-xtensa-intmux.h](esp32s2-xtensa-intmux_8h.md#aefeb2487d77e00408d4b7f2faa4f840f)
- APDO\_TYPE\_PPS : [pd.h](pd_8h.md#aa48ea0300d5342ef46c5c56ee73bca24)
- APOLLO3\_ALT\_FUNC\_MASK : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#aa00706366b69ceb3628404acb54d08c3)
- APOLLO3\_ALT\_FUNC\_POS : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#aec76f3cfd2a609e60eabf5628f5ee698)
- APOLLO3\_PIN\_NUM\_MASK : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#a71eb3e43677ab0f8c9abd0fc61aafaab)
- APOLLO3\_PIN\_NUM\_POS : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#a31b09dab4803a326db645412cf2d7acd)
- APOLLO3\_PINMUX : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#a2e4e01a3d50c6ced0a21d65877b0cdb2)
- APOLLO4\_ALT\_FUNC\_MASK : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#abfa1ad75be5bb9dbe60ce4f82fb669d5)
- APOLLO4\_ALT\_FUNC\_POS : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aad69bd7372283ab49bae2478e2695832)
- APOLLO4\_PIN\_NUM\_MASK : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aca5be2343303d2e76533d2d3b0016a2f)
- APOLLO4\_PIN\_NUM\_POS : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ab9b66c304105a703bf9beb8b01246aa3)
- APOLLO4\_PINMUX : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a0bb5466111e8e39af5d54e3a713a660d)
- APP\_KEY\_COUNT : [cdb.h](cdb_8h.md#aab65f293c17c657d670e802bbfe389d7)
- ARC\_CLN\_CACHE\_ADDR\_HI0 : [cluster.h](cluster_8h.md#a2ef20e3976381cacf0c93e3c8b89eb25)
- ARC\_CLN\_CACHE\_ADDR\_HI1 : [cluster.h](cluster_8h.md#aad5886b10a82cf6fd46bf3a4b6fb7140)
- ARC\_CLN\_CACHE\_ADDR\_LO0 : [cluster.h](cluster_8h.md#a837a7b2c1dce58bfe20738b5335d3847)
- ARC\_CLN\_CACHE\_ADDR\_LO1 : [cluster.h](cluster_8h.md#abf4e31eb215a4f8a1be02a0ac9d02b2d)
- ARC\_CLN\_CACHE\_CMD : [cluster.h](cluster_8h.md#a23e947cb61e4110104f06187accf7eab)
- ARC\_CLN\_CACHE\_CMD\_INCR : [cluster.h](cluster_8h.md#a8769aaa12bdd2bb25b51125f37f4c213)
- ARC\_CLN\_CACHE\_CMD\_OP\_ADDR\_CLN : [cluster.h](cluster_8h.md#a31a497b5cfaa26f8bd8982873c9d930d)
- ARC\_CLN\_CACHE\_CMD\_OP\_ADDR\_CLN\_INV : [cluster.h](cluster_8h.md#a4b7313b87b272d1f3b4a18faab1d74c7)
- ARC\_CLN\_CACHE\_CMD\_OP\_ADDR\_INV : [cluster.h](cluster_8h.md#a7c5f71d32bb9a5b09a6dd0eab402b127)
- ARC\_CLN\_CACHE\_CMD\_OP\_IDX\_CLN : [cluster.h](cluster_8h.md#a598ceb22f93111d7e3d1e86530a541c9)
- ARC\_CLN\_CACHE\_CMD\_OP\_IDX\_CLN\_INV : [cluster.h](cluster_8h.md#a9277c238385224cfe5365c6cb2256e6c)
- ARC\_CLN\_CACHE\_CMD\_OP\_IDX\_INV : [cluster.h](cluster_8h.md#a07e8d0b1bbf0f700ba8b1ffb435fc5cc)
- ARC\_CLN\_CACHE\_CMD\_OP\_LOOKUP : [cluster.h](cluster_8h.md#a8134b5e1fe035d87d9b72460ff03b4a0)
- ARC\_CLN\_CACHE\_CMD\_OP\_NOP : [cluster.h](cluster_8h.md#a3e89f76e02a55187fe1acabdb6231663)
- ARC\_CLN\_CACHE\_CMD\_OP\_PROBE : [cluster.h](cluster_8h.md#ab5881a521b91e7061b317889e22c68a6)
- ARC\_CLN\_CACHE\_CMD\_OP\_REG\_CLN : [cluster.h](cluster_8h.md#a1beaa91ef4611c2c13c202f2f5de3cb7)
- ARC\_CLN\_CACHE\_CMD\_OP\_REG\_CLN\_INV : [cluster.h](cluster_8h.md#a5051697d74e83e04e45f0f235a8810b5)
- ARC\_CLN\_CACHE\_CMD\_OP\_REG\_INV : [cluster.h](cluster_8h.md#ab925b9c327fd17d609b482895891c52d)
- ARC\_CLN\_CACHE\_ERR : [cluster.h](cluster_8h.md#ae73c0ea02ac014b76276565641fbad1a)
- ARC\_CLN\_CACHE\_ERR\_ADDR0 : [cluster.h](cluster_8h.md#a87e8c3294e03bdec644004708df609a9)
- ARC\_CLN\_CACHE\_ERR\_ADDR1 : [cluster.h](cluster_8h.md#aba01780d29faae95511855fbe173899d)
- ARC\_CLN\_CACHE\_STATUS : [cluster.h](cluster_8h.md#a04b102793c6c338475d0c417fdc37dc7)
- ARC\_CLN\_CACHE\_STATUS\_BUSY : [cluster.h](cluster_8h.md#a5588c243334ec9f77094e3790de1edfc)
- ARC\_CLN\_CACHE\_STATUS\_DONE : [cluster.h](cluster_8h.md#ad47fc2d06da9cad04f418c3be0b64d47)
- ARC\_CLN\_CACHE\_STATUS\_EN : [cluster.h](cluster_8h.md#a7a26bf132d33d0b822f6e545e1a7a1ef)
- ARC\_CLN\_CACHE\_STATUS\_MASK : [cluster.h](cluster_8h.md#a9db97202cbf743f26d0ecfc5c67bda72)
- ARC\_CLN\_MST\_NOC\_0\_0\_ADDR : [cluster.h](cluster_8h.md#af50cee9c1dd5c1b68f98704f5cfb528a)
- ARC\_CLN\_MST\_NOC\_0\_0\_SIZE : [cluster.h](cluster_8h.md#ae41dbdd46df7733240048b55815ba654)
- ARC\_CLN\_MST\_NOC\_0\_1\_ADDR : [cluster.h](cluster_8h.md#a7000f685fa8063fd0057c49691290645)
- ARC\_CLN\_MST\_NOC\_0\_1\_SIZE : [cluster.h](cluster_8h.md#a426c96f351acc28a58bd5cef0f36f3ff)
- ARC\_CLN\_MST\_NOC\_0\_2\_ADDR : [cluster.h](cluster_8h.md#ab3846a793efd5eb9570de9f6178a9a48)
- ARC\_CLN\_MST\_NOC\_0\_2\_SIZE : [cluster.h](cluster_8h.md#a876421485286903d1af0f5a4a56ed426)
- ARC\_CLN\_MST\_NOC\_0\_3\_ADDR : [cluster.h](cluster_8h.md#a7e5a8e8618d82e734af8104a14ceaa42)
- ARC\_CLN\_MST\_NOC\_0\_3\_SIZE : [cluster.h](cluster_8h.md#af55d5a6b812ca91bf826f6b6ff6db5f3)
- ARC\_CLN\_MST\_NOC\_0\_4\_ADDR : [cluster.h](cluster_8h.md#a637eb678ac4f9737e822820f3f4cc4d3)
- ARC\_CLN\_MST\_NOC\_0\_4\_SIZE : [cluster.h](cluster_8h.md#ac384c2a493b8036c3ff4d2b588abb2b0)
- ARC\_CLN\_MST\_NOC\_0\_BCR : [cluster.h](cluster_8h.md#ae8548b32fefa14c8ee8b2df215bcde8a)
- ARC\_CLN\_MST\_NOC\_1\_BCR : [cluster.h](cluster_8h.md#a7b9948865accce27b428ab101d4f7488)
- ARC\_CLN\_MST\_NOC\_2\_BCR : [cluster.h](cluster_8h.md#af8bb48bfd94941b91441f8fab7e26b39)
- ARC\_CLN\_MST\_NOC\_3\_BCR : [cluster.h](cluster_8h.md#a5ec102830a019fd6b9eff79c1fc64a9c)
- ARC\_CLN\_MST\_PER\_0\_BCR : [cluster.h](cluster_8h.md#a4a990ce76f504e654ef3ac5fd8f7213a)
- ARC\_CLN\_MST\_PER\_1\_BCR : [cluster.h](cluster_8h.md#a669fcee44d5ac869dc49776bb6984724)
- ARC\_CLN\_PER0\_BASE : [cluster.h](cluster_8h.md#adfd899ecec6fb897c839ea59066723bd)
- ARC\_CLN\_PER0\_SIZE : [cluster.h](cluster_8h.md#ad88ec2aeacf13576b40f734c6d0aeebc)
- ARC\_CLN\_PER\_0\_BASE : [cluster.h](cluster_8h.md#a2e148f6cb243a4e98bbac15e91a08bca)
- ARC\_CLN\_PER\_0\_SIZE : [cluster.h](cluster_8h.md#a80b5165ddda4c428344f008886389779)
- ARC\_CLN\_PER\_1\_BASE : [cluster.h](cluster_8h.md#a45ed0679d4903c9ad3cae818ea69ded7)
- ARC\_CLN\_PER\_1\_SIZE : [cluster.h](cluster_8h.md#ac5a80d92726f545edd24586c7e9e537e)
- ARC\_CLN\_SCM\_BCR\_0 : [cluster.h](cluster_8h.md#acd23250017388ccdc6c4d29937fd6a32)
- ARC\_CLN\_SCM\_BCR\_1 : [cluster.h](cluster_8h.md#aa81707d4070e08efea3a7d602611fb18)
- ARC\_CLN\_SHMEM\_ADDR : [cluster.h](cluster_8h.md#a36813211233630a20c6b5c8e6c5e9871)
- ARC\_CLN\_SHMEM\_SIZE : [cluster.h](cluster_8h.md#a93000d405af39e772bf1f4b0abad6988)
- ARC\_CONNECT\_CMD\_CHECK\_CORE\_ID : [arc\_connect.h](arc__connect_8h.md#aa0916ff664e0555cca8d89a91a97f0af)
- ARC\_CONNECT\_CMD\_DEBUG\_HALT : [arc\_connect.h](arc__connect_8h.md#a79d027948ada6f25c40858a1842a3165)
- ARC\_CONNECT\_CMD\_DEBUG\_MASK\_AH : [arc\_connect.h](arc__connect_8h.md#a677a6e9abbd1ff3657f17bf5f272ad9a)
- ARC\_CONNECT\_CMD\_DEBUG\_MASK\_BH : [arc\_connect.h](arc__connect_8h.md#af109c1e8746d8f33d170db073cc2df9e)
- ARC\_CONNECT\_CMD\_DEBUG\_MASK\_H : [arc\_connect.h](arc__connect_8h.md#a9f2c6449b60ac3123e4ef3b98c12c4f1)
- ARC\_CONNECT\_CMD\_DEBUG\_MASK\_SH : [arc\_connect.h](arc__connect_8h.md#a286b79aaff7ec2eb5df86927abf2fa0f)
- ARC\_CONNECT\_CMD\_DEBUG\_READ\_CMD : [arc\_connect.h](arc__connect_8h.md#aaf0860d01aca22d2c057418603bed930)
- ARC\_CONNECT\_CMD\_DEBUG\_READ\_CORE : [arc\_connect.h](arc__connect_8h.md#a2e5ddca1dfc8e24cb5cb7825e9be9ba1)
- ARC\_CONNECT\_CMD\_DEBUG\_READ\_EN : [arc\_connect.h](arc__connect_8h.md#a09feefc3b1b8d7f818dcdc7fe817a594)
- ARC\_CONNECT\_CMD\_DEBUG\_READ\_MASK : [arc\_connect.h](arc__connect_8h.md#a1e1efe68fe11446d8c54685e820f2dd0)
- ARC\_CONNECT\_CMD\_DEBUG\_READ\_SELECT : [arc\_connect.h](arc__connect_8h.md#ad825597a6a0948fa0e8c6d8d16169c93)
- ARC\_CONNECT\_CMD\_DEBUG\_RESET : [arc\_connect.h](arc__connect_8h.md#a5de7138d686356bf695c73f7991a5cd2)
- ARC\_CONNECT\_CMD\_DEBUG\_RUN : [arc\_connect.h](arc__connect_8h.md#a9f9f9f414b3dda3487078154993fa4b9)
- ARC\_CONNECT\_CMD\_DEBUG\_SET\_MASK : [arc\_connect.h](arc__connect_8h.md#af4560d50adc746f660695b60e5a534ef)
- ARC\_CONNECT\_CMD\_DEBUG\_SET\_SELECT : [arc\_connect.h](arc__connect_8h.md#a1c22504f72eccdd532d39525c3a3938e)
- ARC\_CONNECT\_CMD\_GFRC\_CLEAR : [arc\_connect.h](arc__connect_8h.md#a32332ac2356d0b7bc1f2d2f8642f8bd0)
- ARC\_CONNECT\_CMD\_GFRC\_DISABLE : [arc\_connect.h](arc__connect_8h.md#ab1a780f10bb9cc5718607b4e8cdbbba4)
- ARC\_CONNECT\_CMD\_GFRC\_ENABLE : [arc\_connect.h](arc__connect_8h.md#a14c5bf6c6fbea0b73204f147411efb19)
- ARC\_CONNECT\_CMD\_GFRC\_READ\_CORE : [arc\_connect.h](arc__connect_8h.md#a588d0b3b5272afd4164920b468e4bf31)
- ARC\_CONNECT\_CMD\_GFRC\_READ\_DISABLE : [arc\_connect.h](arc__connect_8h.md#a886660fefc56e449dfdb1f0db3047730)
- ARC\_CONNECT\_CMD\_GFRC\_READ\_HALT : [arc\_connect.h](arc__connect_8h.md#aaf7a4f5122847621acb233e7849a6b6d)
- ARC\_CONNECT\_CMD\_GFRC\_READ\_HI : [arc\_connect.h](arc__connect_8h.md#a706c63576dd21a2b924911fb121782f4)
- ARC\_CONNECT\_CMD\_GFRC\_READ\_LO : [arc\_connect.h](arc__connect_8h.md#aa8a28e07e540f418bf016538d42bde82)
- ARC\_CONNECT\_CMD\_GFRC\_SET\_CORE : [arc\_connect.h](arc__connect_8h.md#a0944e99eebe084f942bdb7c22b74bfc0)
- ARC\_CONNECT\_CMD\_IDU\_ACK\_CIRQ : [arc\_connect.h](arc__connect_8h.md#abe7202c5a016c9a94eeb6d8995eea03c)
- ARC\_CONNECT\_CMD\_IDU\_CHECK\_FIRST : [arc\_connect.h](arc__connect_8h.md#ae6a517147194f518687ad0ac8eb107a6)
- ARC\_CONNECT\_CMD\_IDU\_CHECK\_SOURCE : [arc\_connect.h](arc__connect_8h.md#a8a306828e1fef2bbf7aa30a95c2b2359)
- ARC\_CONNECT\_CMD\_IDU\_CHECK\_STATUS : [arc\_connect.h](arc__connect_8h.md#a4c3da41b3dec1043ad46607d945895a9)
- ARC\_CONNECT\_CMD\_IDU\_DISABLE : [arc\_connect.h](arc__connect_8h.md#a22292ad920b7222e1bf3d057cee6a9c0)
- ARC\_CONNECT\_CMD\_IDU\_ENABLE : [arc\_connect.h](arc__connect_8h.md#afcc229c691acfb72afc9ab344ff0fc07)
- ARC\_CONNECT\_CMD\_IDU\_GEN\_CIRQ : [arc\_connect.h](arc__connect_8h.md#a20b34806c9402e938874f0fb9cbe42d9)
- ARC\_CONNECT\_CMD\_IDU\_READ\_DEST : [arc\_connect.h](arc__connect_8h.md#adf49a1317a314ac6c2fc9b796f9577c8)
- ARC\_CONNECT\_CMD\_IDU\_READ\_ENABLE : [arc\_connect.h](arc__connect_8h.md#a99f1e171858a67934a83ecc5f96b367d)
- ARC\_CONNECT\_CMD\_IDU\_READ\_MASK : [arc\_connect.h](arc__connect_8h.md#a45b6e97825dccc8b73943a9eaa2a876c)
- ARC\_CONNECT\_CMD\_IDU\_READ\_MODE : [arc\_connect.h](arc__connect_8h.md#a7a699283d26fe84104ed4d57d09657e2)
- ARC\_CONNECT\_CMD\_IDU\_SET\_DEST : [arc\_connect.h](arc__connect_8h.md#afb2d3ade8e16c9f302fa245c5a27b186)
- ARC\_CONNECT\_CMD\_IDU\_SET\_MASK : [arc\_connect.h](arc__connect_8h.md#a066d1063d46301167e19ae2a9011c5f8)
- ARC\_CONNECT\_CMD\_IDU\_SET\_MODE : [arc\_connect.h](arc__connect_8h.md#a0ac262572bd76b18d6a36c96557a8880)
- ARC\_CONNECT\_CMD\_INTRPT\_CHECK\_SOURCE : [arc\_connect.h](arc__connect_8h.md#a4385db77797902d33cdd68040b4e44d5)
- ARC\_CONNECT\_CMD\_INTRPT\_GENERATE\_ACK : [arc\_connect.h](arc__connect_8h.md#a96eb8f0b5182143b5d4e9837a28cbe96)
- ARC\_CONNECT\_CMD\_INTRPT\_GENERATE\_IRQ : [arc\_connect.h](arc__connect_8h.md#a60b0ff098e6b3b90844e9114b736e850)
- ARC\_CONNECT\_CMD\_INTRPT\_READ\_STATUS : [arc\_connect.h](arc__connect_8h.md#af4d24daffda05ed8dff95fe6b8ebb54d)
- ARC\_CONNECT\_CMD\_MSG\_SRAM\_READ : [arc\_connect.h](arc__connect_8h.md#a95abc6ae373160a7fdd95eeeaffbf068)
- ARC\_CONNECT\_CMD\_MSG\_SRAM\_READ\_ADDR : [arc\_connect.h](arc__connect_8h.md#a079317281d49d8e57f2a08ce5b396aa4)
- ARC\_CONNECT\_CMD\_MSG\_SRAM\_READ\_ADDR\_OFFSET : [arc\_connect.h](arc__connect_8h.md#a4a09502754de405e3ed9f1459865281c)
- ARC\_CONNECT\_CMD\_MSG\_SRAM\_READ\_ECC\_CTRL : [arc\_connect.h](arc__connect_8h.md#a250624ed309ab3ce6158dfd472c7e62b)
- ARC\_CONNECT\_CMD\_MSG\_SRAM\_READ\_IMM : [arc\_connect.h](arc__connect_8h.md#a2291642fff8644955ed8c91dd5459f58)
- ARC\_CONNECT\_CMD\_MSG\_SRAM\_READ\_INC : [arc\_connect.h](arc__connect_8h.md#a1fa49a1bd5740431b7e1031ec3f4e3a5)
- ARC\_CONNECT\_CMD\_MSG\_SRAM\_SET\_ADDR : [arc\_connect.h](arc__connect_8h.md#a6a0cc8aafee6d4234f461f38653ff86b)
- ARC\_CONNECT\_CMD\_MSG\_SRAM\_SET\_ADDR\_OFFSET : [arc\_connect.h](arc__connect_8h.md#abf3ca67becaed32adec81175a393aa25)
- ARC\_CONNECT\_CMD\_MSG\_SRAM\_SET\_ECC\_CTRL : [arc\_connect.h](arc__connect_8h.md#abfa2e40196acb76717e6ac5d7d2ccea2)
- ARC\_CONNECT\_CMD\_MSG\_SRAM\_WRITE : [arc\_connect.h](arc__connect_8h.md#a19e19e783ad81f6738e01cdaf551910a)
- ARC\_CONNECT\_CMD\_MSG\_SRAM\_WRITE\_IMM : [arc\_connect.h](arc__connect_8h.md#a7ef798f2fb76d2376233b2ac4563bda4)
- ARC\_CONNECT\_CMD\_MSG\_SRAM\_WRITE\_INC : [arc\_connect.h](arc__connect_8h.md#ad9c105f0ec703aaccaefa51e058b8e66)
- ARC\_CONNECT\_CMD\_PDM\_READ\_PSTATUS : [arc\_connect.h](arc__connect_8h.md#afd8a691965ed96ac3e5949f529598450)
- ARC\_CONNECT\_CMD\_PDM\_SET\_PM : [arc\_connect.h](arc__connect_8h.md#a497ee266769c5ca951a402895dead4a8)
- ARC\_CONNECT\_CMD\_PMU\_READ\_PDCNT : [arc\_connect.h](arc__connect_8h.md#a22c2df120423e7243719d223130ec0d3)
- ARC\_CONNECT\_CMD\_PMU\_READ\_PUCNT : [arc\_connect.h](arc__connect_8h.md#a1028729196bcc91e5d16341d78ad97ee)
- ARC\_CONNECT\_CMD\_PMU\_READ\_RSTCNT : [arc\_connect.h](arc__connect_8h.md#ae3f58528546b78730f9e48a024927913)
- ARC\_CONNECT\_CMD\_PMU\_SET\_PDCNT : [arc\_connect.h](arc__connect_8h.md#a756ac1596057df9ffc4a12d048a678d1)
- ARC\_CONNECT\_CMD\_PMU\_SET\_PUCNT : [arc\_connect.h](arc__connect_8h.md#a187e3d3614537efd81bff08788f083b9)
- ARC\_CONNECT\_CMD\_PMU\_SET\_RSTCNT : [arc\_connect.h](arc__connect_8h.md#a0f819573b0c71f6719813ca40d181d2a)
- ARC\_CONNECT\_CMD\_SEMA\_CLAIM\_AND\_READ : [arc\_connect.h](arc__connect_8h.md#ad371fa315bc739421c302d9f5836aea0)
- ARC\_CONNECT\_CMD\_SEMA\_FORCE\_RELEASE : [arc\_connect.h](arc__connect_8h.md#a98224c548cd6a21711c65a14a7e1f7ea)
- ARC\_CONNECT\_CMD\_SEMA\_RELEASE : [arc\_connect.h](arc__connect_8h.md#aeb3a29644bb96b3ae1466c65573310a5)
- ARC\_CONNECT\_DISTRI\_ALL\_DEST : [arc\_connect.h](arc__connect_8h.md#a26667f2090d8ebd9229ca02964491644)
- ARC\_CONNECT\_DISTRI\_MODE\_FIRST\_ACK : [arc\_connect.h](arc__connect_8h.md#aff9e1c8c2e14244286702d8038d4dc9b)
- ARC\_CONNECT\_DISTRI\_MODE\_ROUND\_ROBIN : [arc\_connect.h](arc__connect_8h.md#af3566e4fd9229da92068284811608f5b)
- ARC\_CONNECT\_IDU\_IRQ\_START : [arc\_connect.h](arc__connect_8h.md#a4e5782d78d6200b217740c83be9ac9de)
- ARC\_CONNECT\_INTRPT\_TRIGGER\_EDGE : [arc\_connect.h](arc__connect_8h.md#a75b642dd17f8851fb7cb2109fafd7578)
- ARC\_CONNECT\_INTRPT\_TRIGGER\_LEVEL : [arc\_connect.h](arc__connect_8h.md#ad1978b6fef840e5f15b239d995a1d9d4)
- ARC\_EV\_DC\_ERROR : [exception.h](arc_2v2_2exception_8h.md#aca9e2d443855714d67aa0001affd2c4a)
- ARC\_EV\_DIV\_ZERO : [exception.h](arc_2v2_2exception_8h.md#a0c132bd763cf093dd7f87318607977fa)
- ARC\_EV\_EXTENSION : [exception.h](arc_2v2_2exception_8h.md#ab6d6036ccdf6dc66959ca3ac90aa6cde)
- ARC\_EV\_INS\_ERROR : [exception.h](arc_2v2_2exception_8h.md#a57a4267b70061307f2fed74473e17015)
- ARC\_EV\_MACHINE\_CHECK : [exception.h](arc_2v2_2exception_8h.md#a10e5ab692a8dcb6bc6bb849222e12940)
- ARC\_EV\_MEM\_ERROR : [exception.h](arc_2v2_2exception_8h.md#a79e227883063d92c0d47cc750c37eb86)
- ARC\_EV\_MISALIGNED : [exception.h](arc_2v2_2exception_8h.md#a2b2768d051be571940d8f0ca5acc8ddf)
- ARC\_EV\_PRIVILEGE\_V : [exception.h](arc_2v2_2exception_8h.md#a604874d6ae9f845175e425bc897751f8)
- ARC\_EV\_PROT\_V : [exception.h](arc_2v2_2exception_8h.md#ad42a3dc7f1f4f4da9978ce667ae1ec2f)
- ARC\_EV\_RESET : [exception.h](arc_2v2_2exception_8h.md#a2f8e6622ee49d9a5eed7f15288e7d8ae)
- ARC\_EV\_SWI : [exception.h](arc_2v2_2exception_8h.md#a42b3a14ded2c98e7e37a7375efd81e91)
- ARC\_EV\_TLB\_MISS\_D : [exception.h](arc_2v2_2exception_8h.md#a48c63c54328299dfa3bec2b71c4ab610)
- ARC\_EV\_TLB\_MISS\_I : [exception.h](arc_2v2_2exception_8h.md#af2d95f9ded1396dd2c0aa7cb41952033)
- ARC\_EV\_TRAP : [exception.h](arc_2v2_2exception_8h.md#abd2003e15eb7839a2454c9da245ee56b)
- ARC\_EV\_VEC\_UNIT : [exception.h](arc_2v2_2exception_8h.md#a777a56039909a5634ad59c04cf240104)
- ARC\_MP\_PRIMARY\_CPU\_ID : [irq.h](arch_2arc_2v2_2irq_8h.md#a55147bf8ba1fd1bb0beef93b7c21c6c2)
- ARC\_N\_IRQ\_START\_LEVEL : [arc\_secure.h](arc__secure_8h.md#a3edfd794bb6ea1db197006312d448402)
- ARC\_S\_CALL\_AUX\_READ : [arc\_secure.h](arc__secure_8h.md#a7d64353fd2cbf804771090d4310a15b5)
- ARC\_S\_CALL\_AUX\_WRITE : [arc\_secure.h](arc__secure_8h.md#a1d4d7c124a5ec3508fb3a7729dd6178e)
- ARC\_S\_CALL\_CLRI : [arc\_secure.h](arc__secure_8h.md#a28c873e308b53950680842fde7016be3)
- ARC\_S\_CALL\_IRQ\_ALLOC : [arc\_secure.h](arc__secure_8h.md#afa6fae9a7ed92cc75dd71e70471898b4)
- ARC\_S\_CALL\_LIMIT : [arc\_secure.h](arc__secure_8h.md#a1c174d5e43e7da15eb77c7c2d6f9daf8)
- ARC\_S\_CALL\_SETI : [arc\_secure.h](arc__secure_8h.md#af0f3d548c3a14b8cf81da4e7c7276e8d)
- arc\_sjli : [arc\_secure.h](arc__secure_8h.md#a0c39c8bb33dd287c51cca9614b1f08fd)
- ARCH\_DATA\_PAGE\_ACCESSED : [mmustructs.h](group__arch-mmu.md#ga38cfc7602d259972cdd0b557ab26c2b4)
- ARCH\_DATA\_PAGE\_DIRTY : [mmustructs.h](group__arch-mmu.md#ga4a60b63f47f88db455d67c33ef7bb85d)
- ARCH\_DATA\_PAGE\_LOADED : [mmustructs.h](group__arch-mmu.md#gae76ce742aca8b4ac12907a2bfce98b0e)
- ARCH\_DATA\_PAGE\_NOT\_MAPPED : [mmustructs.h](group__arch-mmu.md#ga843c53394b00d80b1649a6224557a56a)
- ARCH\_DYNAMIC\_OBJ\_K\_THREAD\_ALIGNMENT : [arch.h](x86_2ia32_2arch_8h.md#ad0a10d482624ef8d91859f5bcdc2f647)
- ARCH\_EXCEPT : [error.h](arc_2v2_2error_8h.md#a8d3604770d7735d229e7d2fef4ff590a), [arch.h](sparc_2arch_8h.md#a8d3604770d7735d229e7d2fef4ff590a)
- ARCH\_IRQ\_CONNECT : [irq.h](arch_2arc_2v2_2irq_8h.md#accdf8a59e00ac1c1fcedc18b78be4b8a), [arch.h](mips_2arch_8h.md#accdf8a59e00ac1c1fcedc18b78be4b8a), [irq.h](arch_2riscv_2irq_8h.md#accdf8a59e00ac1c1fcedc18b78be4b8a), [arch.h](sparc_2arch_8h.md#accdf8a59e00ac1c1fcedc18b78be4b8a)
- ARCH\_IRQ\_DIRECT\_CONNECT : [irq.h](arch_2arc_2v2_2irq_8h.md#a875f2b1ca924721fe3854796bd96c2db), [arch.h](x86_2ia32_2arch_8h.md#a875f2b1ca924721fe3854796bd96c2db)
- arch\_irq\_disable : [irq.h](arch_2xtensa_2irq_8h.md#a19b436a206500c3748ad5c32050db241)
- arch\_irq\_enable : [irq.h](arch_2xtensa_2irq_8h.md#a5ea6488112b97755b13583cd2832c2fa)
- arch\_irq\_is\_enabled : [irq.h](arch_2xtensa_2irq_8h.md#ae95daf1bea993f1d03adaf31fc44c369)
- ARCH\_ISR\_DIAG\_OFF : [irq.h](arch_2arm_2irq_8h.md#aea327928797d5f8a059ee3578cff9f91)
- ARCH\_ISR\_DIAG\_ON : [irq.h](arch_2arm_2irq_8h.md#ad6a5dc7416190e63eb601df2d3eab164)
- ARCH\_ISR\_DIRECT\_DECLARE : [irq.h](arch_2arc_2v2_2irq_8h.md#a5279598e93dd914614a2ae52557be1a5), [arch.h](x86_2ia32_2arch_8h.md#a5279598e93dd914614a2ae52557be1a5)
- ARCH\_ISR\_DIRECT\_FOOTER : [irq.h](arch_2arc_2v2_2irq_8h.md#aa7c471213fa28b3685f153ea2a72cf9d), [arch.h](x86_2ia32_2arch_8h.md#aa7c471213fa28b3685f153ea2a72cf9d)
- ARCH\_ISR\_DIRECT\_HEADER : [irq.h](arch_2arc_2v2_2irq_8h.md#a6c6d57983c066fe8ab21a78f86f7adb3), [arch.h](x86_2ia32_2arch_8h.md#a6c6d57983c066fe8ab21a78f86f7adb3)
- ARCH\_ISR\_DIRECT\_PM : [irq.h](arch_2arm_2irq_8h.md#a491cb79acec18c83b9a61b0b45dfab69), [arch.h](x86_2ia32_2arch_8h.md#a491cb79acec18c83b9a61b0b45dfab69)
- ARCH\_KERNEL\_STACK\_OBJ\_ALIGN : [thread\_stack.h](arch_2arm64_2thread__stack_8h.md#ac5a3684c543902ec50373d2c774c5bf6)
- ARCH\_KERNEL\_STACK\_RESERVED : [thread\_stack.h](arch_2arm64_2thread__stack_8h.md#a75b8e6cce01f5a34e9f3d649e561c3af)
- ARCH\_STACK\_PTR\_ALIGN : [arch.h](arc_2arch_8h.md#af0f8ad93611d93cd0626914837e761d3), [thread\_stack.h](arch_2arm64_2thread__stack_8h.md#af0f8ad93611d93cd0626914837e761d3), [arch.h](mips_2arch_8h.md#af0f8ad93611d93cd0626914837e761d3), [thread\_stack.h](arch_2x86_2thread__stack_8h.md#af0f8ad93611d93cd0626914837e761d3), [ztest.h](ztest_8h.md#af0f8ad93611d93cd0626914837e761d3)
- ARCH\_THREAD\_STACK\_OBJ\_ALIGN : [arch.h](arc_2arch_8h.md#ab6c1d96f5e018ed166ee401dc84b7ab7), [thread\_stack.h](arch_2arm64_2thread__stack_8h.md#ab6c1d96f5e018ed166ee401dc84b7ab7), [arch.h](riscv_2arch_8h.md#ab6c1d96f5e018ed166ee401dc84b7ab7), [thread\_stack.h](arch_2x86_2thread__stack_8h.md#ab6c1d96f5e018ed166ee401dc84b7ab7)
- ARCH\_THREAD\_STACK\_RESERVED : [arch.h](arc_2arch_8h.md#ace8831316d471ccfb06eeddb6d69d817), [thread\_stack.h](arch_2arm64_2thread__stack_8h.md#ace8831316d471ccfb06eeddb6d69d817), [arch.h](riscv_2arch_8h.md#ace8831316d471ccfb06eeddb6d69d817), [thread\_stack.h](arch_2x86_2thread__stack_8h.md#ace8831316d471ccfb06eeddb6d69d817)
- ARCH\_THREAD\_STACK\_SIZE\_ADJUST : [arch.h](arc_2arch_8h.md#ab76d60bd06e5c5a0f995c6b11bf97fd8), [thread\_stack.h](arch_2arm64_2thread__stack_8h.md#ab76d60bd06e5c5a0f995c6b11bf97fd8), [arch.h](riscv_2arch_8h.md#ab76d60bd06e5c5a0f995c6b11bf97fd8), [thread\_stack.h](arch_2x86_2thread__stack_8h.md#ab76d60bd06e5c5a0f995c6b11bf97fd8)
- ARCH\_XTENSA\_SET\_RPO\_TLB : [arch.h](xtensa_2arch_8h.md#a835f1838cf0cec9c6a16bacc62436f0f)
- ARDUINO\_ADC : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a7d29cce436d0b1dbeb7d89b0e26b0447)
- ARDUINO\_GPIO : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a3be02cd4af84cacb1127464d8e999cf1)
- ARDUINO\_I2C : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#aeb8771f0409c18b445525e92eb3c875b)
- ARDUINO\_PIN\_0 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#acad741047fd7dca25a3dd8a62aa29462)
- ARDUINO\_PIN\_1 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#aceb50b34589a0d29d5c07b2846de8eaa)
- ARDUINO\_PIN\_10 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a0a6f8661753df638c06695364980fdbb)
- ARDUINO\_PIN\_11 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a9387f1733914a0fc5938510573282a35)
- ARDUINO\_PIN\_12 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a34be4848158ca64f9ad7723ab2e3ea66)
- ARDUINO\_PIN\_13 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a1bd18a419e095cdfe447689fdcd196be)
- ARDUINO\_PIN\_2 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a442a4d1d35251c8e39845582afc92f7a)
- ARDUINO\_PIN\_3 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#ae52d466203b1be7d2a8b52a05efa0c49)
- ARDUINO\_PIN\_4 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a4c9ea65aa36101fde55e6b28f2ee99fc)
- ARDUINO\_PIN\_5 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a9b264db3d6951e7b8fd115eede94f9f0)
- ARDUINO\_PIN\_6 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a4610d5acda40575f42f367db84e7a90a)
- ARDUINO\_PIN\_7 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a9ec207e1ec82310017a39485ac63548b)
- ARDUINO\_PIN\_8 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a015145fa7fd3f0337d0870e0d1e291a4)
- ARDUINO\_PIN\_9 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a93a418c3f0d1e46b8da3482bddc1ae9b)
- ARDUINO\_PIN\_AD0 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#addf72d6c5939a165f880f5af2697d5ed)
- ARDUINO\_PIN\_AD1 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a4c596158e197cf793d779851e071de4f)
- ARDUINO\_PIN\_AD2 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a73669f8af7e092ddde87a739ce596bac)
- ARDUINO\_PIN\_AD3 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a84eb57d06a2dc41118e6127f33cd0319)
- ARDUINO\_PIN\_AD4 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#ad99538f6aaa63c918ce4390d2a38373f)
- ARDUINO\_PIN\_AD5 : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#ae1c52d372a374566fcd122123c1fcf57)
- ARDUINO\_PWM : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a0526d4e7f01317e0b4d43726bb32f8c1)
- ARDUINO\_SPI : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#ad5cafc3df8b742439455acce87a9ef99)
- ARDUINO\_UART : [emsdp-pinctrl.h](emsdp-pinctrl_8h.md#a9b66efcf31ffd935735691c1827cd14e)
- ARM64\_CPU\_INIT\_SIZE : [cpu.h](arm64_2cpu_8h.md#ab5541d63dd4db4182ab1da587f29189a)
- ARM64\_MPU\_MAX\_DYNAMIC\_REGIONS : [arm\_mpu.h](4_2cortex__r_2arm__mpu_8h.md#a6e954e6d9c6117210d857b360bf5fa51)
- ARM\_ARCH\_TIMER\_FLAGS : [armv8\_timer.h](armv8__timer_8h.md#a2ab15e3403580f8986b7c7391f0fbbd2), [timer.h](4_2timer_8h.md#a2ab15e3403580f8986b7c7391f0fbbd2)
- ARM\_ARCH\_TIMER\_IRQ : [armv8\_timer.h](armv8__timer_8h.md#a6740222458f89442f50b688bfa69797f), [timer.h](4_2timer_8h.md#a6740222458f89442f50b688bfa69797f)
- ARM\_ARCH\_TIMER\_PRIO : [armv8\_timer.h](armv8__timer_8h.md#a319716e35b4e65c8480c0b90624a7899), [timer.h](4_2timer_8h.md#a319716e35b4e65c8480c0b90624a7899)
- ARM\_MPU\_REGION\_INIT : [arm\_mpu\_v7m.h](arm__mpu__v7m_8h.md#a2ec2a5ebe99ddac405570be52bc3a728), [arm\_mpu\_v8.h](arm__mpu__v8_8h.md#a2ec2a5ebe99ddac405570be52bc3a728)
- ARM\_MPU\_REGION\_SIZE\_128KB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#a362c22f584b2822b8f451e356cba39d4)
- ARM\_MPU\_REGION\_SIZE\_128MB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#ae8fd2daf98ba641d02ff7ca3978a3ad9)
- ARM\_MPU\_REGION\_SIZE\_16KB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#af7a1b511ea419cb40777e0eaf32cc7e2)
- ARM\_MPU\_REGION\_SIZE\_16MB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#af3f56fa6ceeede9a0106d7f98b27a31e)
- ARM\_MPU\_REGION\_SIZE\_1GB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#ac8d05ede24fdfca60537ca47f86dce1d)
- ARM\_MPU\_REGION\_SIZE\_1KB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#ae5bf2b5255a76ff6b62dfaed01580e9d)
- ARM\_MPU\_REGION\_SIZE\_1MB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#aa2f3cf8222d50742ff33c94b7c8b3612)
- ARM\_MPU\_REGION\_SIZE\_256B : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#ad9d8775a432b076a44a93cbf725e8619)
- ARM\_MPU\_REGION\_SIZE\_256KB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#ac489a9c4e5b9cdf9acd7748c9616499b)
- ARM\_MPU\_REGION\_SIZE\_256MB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#acce8e377f172943311b6268118bfcfdf)
- ARM\_MPU\_REGION\_SIZE\_2GB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#a8f5d28ac5a55d84a4d0cf271e06bbb19)
- ARM\_MPU\_REGION\_SIZE\_2KB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#ad4d916f22b3737207c55b8d0d165caee)
- ARM\_MPU\_REGION\_SIZE\_2MB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#a2109105e7e283d5a5cf88772b776e441)
- ARM\_MPU\_REGION\_SIZE\_32KB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#a4d0d0ebcc97c9f24618808b66847056a)
- ARM\_MPU\_REGION\_SIZE\_32MB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#a8b5fabd9bb7508e14e1bae69529a5853)
- ARM\_MPU\_REGION\_SIZE\_4GB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#ace58a7f0428b94180b8e61e29564f408)
- ARM\_MPU\_REGION\_SIZE\_4KB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#a0612fe51de2b25b49692290d072d829c)
- ARM\_MPU\_REGION\_SIZE\_4MB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#a5d38b84546726a09a19c28f8de770b11)
- ARM\_MPU\_REGION\_SIZE\_512B : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#a79a3000f14a4d30b77e513c4db53cbe5)
- ARM\_MPU\_REGION\_SIZE\_512KB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#a074f11c22a2c6e4deaf1e8f78717730d)
- ARM\_MPU\_REGION\_SIZE\_512MB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#a55ee4d5868b59de98bad7107243c2a95)
- ARM\_MPU\_REGION\_SIZE\_64KB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#ad0c79b123d9c7954c48fda30ef25b609)
- ARM\_MPU\_REGION\_SIZE\_64MB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#a8fb3e1bb94b66387331a84c5c488286a)
- ARM\_MPU\_REGION\_SIZE\_8KB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#a4ce38a1ed6641648a2d2a66f48dbcb24)
- ARM\_MPU\_REGION\_SIZE\_8MB : [mpu.h](arm_2cortex__a__r_2mpu_8h.md#a62bebf6281c66f54f1d35ca43429c631)
- ARM\_TIMER\_HYP\_FLAGS : [arm\_arch\_timer.h](arm__arch__timer_8h.md#a9c6a0c6b52a600627958024cf80929de)
- ARM\_TIMER\_HYP\_IRQ : [arm\_arch\_timer.h](arm__arch__timer_8h.md#abb6827272e664d5f0ebc05efaacf4a8c)
- ARM\_TIMER\_HYP\_PRIO : [arm\_arch\_timer.h](arm__arch__timer_8h.md#a5b8a919fcfd8e4346aca7eefa382a1f0)
- ARM\_TIMER\_NODE : [arm\_arch\_timer.h](arm__arch__timer_8h.md#aea7a05797c3c8202e22fbde7784e6f42)
- ARM\_TIMER\_NON\_SECURE\_FLAGS : [arm\_arch\_timer.h](arm__arch__timer_8h.md#a7852b4d22a08d2bef99c14495daff57a)
- ARM\_TIMER\_NON\_SECURE\_IRQ : [arm\_arch\_timer.h](arm__arch__timer_8h.md#a62df9aa2725c6cc49641bad7eddedfb2)
- ARM\_TIMER\_NON\_SECURE\_PRIO : [arm\_arch\_timer.h](arm__arch__timer_8h.md#a48f3d216ea1166a40f7c5ab333e269b8)
- ARM\_TIMER\_SECURE\_FLAGS : [arm\_arch\_timer.h](arm__arch__timer_8h.md#ab43f20d1d6d366b921817c2c463c5025)
- ARM\_TIMER\_SECURE\_IRQ : [arm\_arch\_timer.h](arm__arch__timer_8h.md#ab20a2e64d841b305054bb1e5463de625)
- ARM\_TIMER\_SECURE\_PRIO : [arm\_arch\_timer.h](arm__arch__timer_8h.md#a10a91fd36630255fb88f08558b96be7a)
- ARM\_TIMER\_VIRTUAL\_FLAGS : [arm\_arch\_timer.h](arm__arch__timer_8h.md#a373af60653667562ca2ca950c45e4b20)
- ARM\_TIMER\_VIRTUAL\_IRQ : [arm\_arch\_timer.h](arm__arch__timer_8h.md#a22468e93135e790458d9c2bfd493c070)
- ARM\_TIMER\_VIRTUAL\_PRIO : [arm\_arch\_timer.h](arm__arch__timer_8h.md#acafac307be9d89ff4ebb72ab23c75ac6)
- ARPHRD\_ADAPT : [if\_arp.h](if__arp_8h.md#a74df13d4969bcad5e7bf0db3706dc388)
- ARPHRD\_APPLETLK : [if\_arp.h](if__arp_8h.md#a7614228ba176316183dc2ccd61134b6a)
- ARPHRD\_ARCNET : [if\_arp.h](if__arp_8h.md#ade606bd55e7f4f0a03278eed4a8badf8)
- ARPHRD\_ASH : [if\_arp.h](if__arp_8h.md#acb4198100868cf41fbbce66aca49b616)
- ARPHRD\_ATM : [if\_arp.h](if__arp_8h.md#a52fe51e586dd5952a78a42de1a2992e8)
- ARPHRD\_AX25 : [if\_arp.h](if__arp_8h.md#aeaba33578b2449674b76cd29692a687c)
- ARPHRD\_BIF : [if\_arp.h](if__arp_8h.md#aaa09c89bce8795a20f412e75cb441adf)
- ARPHRD\_CAN : [if\_arp.h](if__arp_8h.md#a07220dd6d6e255e11f0ea1cf99feba0d)
- ARPHRD\_CHAOS : [if\_arp.h](if__arp_8h.md#a6b5310b0311353a79e66f7700ce88e8d)
- ARPHRD\_CISCO : [if\_arp.h](if__arp_8h.md#a410eced86d38da357b0ffb10adba4ca2)
- ARPHRD\_CSLIP : [if\_arp.h](if__arp_8h.md#a6651e9c8291dccd470c9426986a160ad)
- ARPHRD\_CSLIP6 : [if\_arp.h](if__arp_8h.md#ab05b137e1709daec52097cd07d9c86c7)
- ARPHRD\_DDCMP : [if\_arp.h](if__arp_8h.md#a3d7f861b4576376afe5a406179df42d8)
- ARPHRD\_DLCI : [if\_arp.h](if__arp_8h.md#af02df7fa9173bc0716fe46eb5d45c3e1)
- ARPHRD\_ECONET : [if\_arp.h](if__arp_8h.md#a0b809ee9057fcd57da421e5e0aae06a7)
- ARPHRD\_EETHER : [if\_arp.h](if__arp_8h.md#aa2d3040a4ca3fa7aa832b0863bb032a4)
- ARPHRD\_ETHER : [if\_arp.h](if__arp_8h.md#a99b0f33012409144fc0b51bfa835dcba)
- ARPHRD\_EUI64 : [if\_arp.h](if__arp_8h.md#abbc7280c99b6907038c8e2a433091133)
- ARPHRD\_FCAL : [if\_arp.h](if__arp_8h.md#ab57dbb123cafe8fab5d73fe516cbaab4)
- ARPHRD\_FCFABRIC : [if\_arp.h](if__arp_8h.md#ac1156888d5f5f118bdb6308cdb3d019f)
- ARPHRD\_FCPL : [if\_arp.h](if__arp_8h.md#ac8dc8a30027ee7ffca6fff796ad61d56)
- ARPHRD\_FCPP : [if\_arp.h](if__arp_8h.md#aaea9329315517c7ca86311f8644cd254)
- ARPHRD\_FDDI : [if\_arp.h](if__arp_8h.md#a270793cc06db405a5f814e4ad8743802)
- ARPHRD\_FRAD : [if\_arp.h](if__arp_8h.md#a49796245f7c1f8f4d58e5ead7af6c66d)
- ARPHRD\_HDLC : [if\_arp.h](if__arp_8h.md#a8e2c80f4cd4774f76cd7803ba31b27e1)
- ARPHRD\_HIPPI : [if\_arp.h](if__arp_8h.md#a41de3e5719f2d77703b7da4dced39096)
- ARPHRD\_HWX25 : [if\_arp.h](if__arp_8h.md#a0eb9519f0ea218877755913bb4533091)
- ARPHRD\_IEEE1394 : [if\_arp.h](if__arp_8h.md#a4d072593e2ce7018e74f42eab74b1506)
- ARPHRD\_IEEE802 : [if\_arp.h](if__arp_8h.md#a63153ce22626e108b5046b89d918803f)
- ARPHRD\_IEEE80211 : [if\_arp.h](if__arp_8h.md#acc8226bf5c1c690acdeb7d827e061107)
- ARPHRD\_IEEE80211\_PRISM : [if\_arp.h](if__arp_8h.md#a9b01c3c5cd6cce41e141cb185ffc2f65)
- ARPHRD\_IEEE80211\_RADIOTAP : [if\_arp.h](if__arp_8h.md#a7b897c5160766a1c3f1ea51635419b48)
- ARPHRD\_IEEE802154 : [if\_arp.h](if__arp_8h.md#adff33b6bd20a8b03fedce3b7fec456e9)
- ARPHRD\_IEEE802154\_PHY : [if\_arp.h](if__arp_8h.md#a2794d558aa2c279f8ac4e3f4e11f72cd)
- ARPHRD\_IEEE802\_TR : [if\_arp.h](if__arp_8h.md#a00bc6b1bb5f426bb58241ba16ad870e7)
- ARPHRD\_INFINIBAND : [if\_arp.h](if__arp_8h.md#abb8ca5a62f0f53187a295f0e96ba208b)
- ARPHRD\_IPDDP : [if\_arp.h](if__arp_8h.md#a47668de0966a3040187f2a640253278b)
- ARPHRD\_IPGRE : [if\_arp.h](if__arp_8h.md#abc6758e951b1761b8ae3748d66b8b830)
- ARPHRD\_IRDA : [if\_arp.h](if__arp_8h.md#a09d2e25da54b5044c67e6ea285a26728)
- ARPHRD\_LAPB : [if\_arp.h](if__arp_8h.md#af09e5ae697b5b32f1e9d053b22a2642c)
- ARPHRD\_LOCALTLK : [if\_arp.h](if__arp_8h.md#a2a6a8456b8d00c4751937f7361d77c87)
- ARPHRD\_LOOPBACK : [if\_arp.h](if__arp_8h.md#a4ee77f8d80bda9f59f5bd7163854e425)
- ARPHRD\_MCTP : [if\_arp.h](if__arp_8h.md#ab490545ded34d438fe2fcc1eaaa39c1e)
- ARPHRD\_METRICOM : [if\_arp.h](if__arp_8h.md#ad597c946041d8b4d02b41c3b2145e10a)
- ARPHRD\_NETROM : [if\_arp.h](if__arp_8h.md#ae1acb8a91a94d38dd411fb5e719f35b0)
- ARPHRD\_NONE : [if\_arp.h](if__arp_8h.md#af54d98448c0e1e1b02d9e565508a4280)
- ARPHRD\_PIMREG : [if\_arp.h](if__arp_8h.md#a90dfe4049e2164cc19bd3b54f2bd2e3f)
- ARPHRD\_PPP : [if\_arp.h](if__arp_8h.md#a18dec8be041946b4a3a75ec73bb4293c)
- ARPHRD\_PRONET : [if\_arp.h](if__arp_8h.md#a394dfc37c8b6c429af9d6562a76b0c99)
- ARPHRD\_RAWHDLC : [if\_arp.h](if__arp_8h.md#a67c7faf6cac1fbc281e82cae47360f30)
- ARPHRD\_RAWIP : [if\_arp.h](if__arp_8h.md#ab2b4f27b07b7e2d03e5873f32089dc23)
- ARPHRD\_ROSE : [if\_arp.h](if__arp_8h.md#aea2aa154ca4cc488c86727dc44b36b19)
- ARPHRD\_RSRVD : [if\_arp.h](if__arp_8h.md#af34e0978e6bb11cf230b5b691a5a1b8a)
- ARPHRD\_SIT : [if\_arp.h](if__arp_8h.md#a40d57acc78d91f5f2bd6ebae7db18aeb)
- ARPHRD\_SKIP : [if\_arp.h](if__arp_8h.md#a282f35b40f5bdb27cfa179e498934c81)
- ARPHRD\_SLIP : [if\_arp.h](if__arp_8h.md#a45d939a8b7cfeb1145cc5a49f6d2a399)
- ARPHRD\_SLIP6 : [if\_arp.h](if__arp_8h.md#ae35c4cbe46fc19d363a7af42c6dcf273)
- ARPHRD\_TUNNEL : [if\_arp.h](if__arp_8h.md#a258c6b24592ed0bfffd287bcf72184cd)
- ARPHRD\_TUNNEL6 : [if\_arp.h](if__arp_8h.md#a28d782f6db80ae8ada7f213842ff2869)
- ARPHRD\_VOID : [if\_arp.h](if__arp_8h.md#a9bc958dad255bdc3fc3fbe067adaf017)
- ARPHRD\_X25 : [if\_arp.h](if__arp_8h.md#a1faa7cf295013abcee809dc908d9be6b)
- ARRAY\_FOR\_EACH : [util.h](group__sys-util.md#ga7a1647a1d17185f9438ed0e3096e68bc)
- ARRAY\_FOR\_EACH\_PTR : [util.h](group__sys-util.md#gafd9d42bbb945424f11b7b023dfd519f9)
- ARRAY\_INDEX : [util.h](group__sys-util.md#ga27c31909224761e41d77118b41212d6b)
- ARRAY\_INDEX\_FLOOR : [util.h](group__sys-util.md#gae0516bf7a39795bcc6f0dfbf3a180c05)
- ARRAY\_SIZE : [util.h](group__sys-util.md#ga70c57aae3eb654e205459b4362c8089a)
- ASPEED\_CLK\_ESPI : [ast10x0\_clock.h](ast10x0__clock_8h.md#a601a84a17a471f751ae260374e39d66c)
- ASPEED\_CLK\_GRP\_0\_OFFSET : [ast10x0\_clock.h](ast10x0__clock_8h.md#a037d8cf6fe0039675c6d0b3ace4421d9)
- ASPEED\_CLK\_GRP\_1\_OFFSET : [ast10x0\_clock.h](ast10x0__clock_8h.md#ab37a99b66163853d3e6ca8f4a9f4d57f)
- ASPEED\_CLK\_GRP\_2\_OFFSET : [ast10x0\_clock.h](ast10x0__clock_8h.md#a608fc420936e936d77ef94427419184d)
- ASPEED\_CLK\_HCLK : [ast10x0\_clock.h](ast10x0__clock_8h.md#abc5d16026e5da37c2a09fdef727fe7ce)
- ASPEED\_CLK\_I3C0 : [ast10x0\_clock.h](ast10x0__clock_8h.md#a410403d49c1bb708d71bf8247dbdc0e2)
- ASPEED\_CLK\_I3C1 : [ast10x0\_clock.h](ast10x0__clock_8h.md#ae7e435ba8c54b91d2f0b4d244fe8c052)
- ASPEED\_CLK\_I3C2 : [ast10x0\_clock.h](ast10x0__clock_8h.md#a1d189580a83d1167491ca053ef22b7fa)
- ASPEED\_CLK\_I3C3 : [ast10x0\_clock.h](ast10x0__clock_8h.md#a755ef8cfe6c78e01a06113f2b3e78204)
- ASPEED\_CLK\_LCLK : [ast10x0\_clock.h](ast10x0__clock_8h.md#a52b659f282d1bf17122e8d6cc4cb89ac)
- ASPEED\_CLK\_LHCCLK : [ast10x0\_clock.h](ast10x0__clock_8h.md#a75e3ccf175dbbfd553b0fe4bf4c8b63c)
- ASPEED\_CLK\_MAC : [ast10x0\_clock.h](ast10x0__clock_8h.md#ade068404e397460803ec43eac6bf2380)
- ASPEED\_CLK\_MCLK : [ast10x0\_clock.h](ast10x0__clock_8h.md#a3b37b31cba1a39e9d641c9f97ed32a28)
- ASPEED\_CLK\_PCLK : [ast10x0\_clock.h](ast10x0__clock_8h.md#a9f9b71ba0ba43b4cebf27a077fd596ed)
- ASPEED\_CLK\_REFCLK : [ast10x0\_clock.h](ast10x0__clock_8h.md#a27b8f6c3f72aebbf0559e85bd43e8641)
- ASPEED\_CLK\_RSACLK : [ast10x0\_clock.h](ast10x0__clock_8h.md#ab111e4dccb054d2b38c7acdda204ed19)
- ASPEED\_CLK\_UART1 : [ast10x0\_clock.h](ast10x0__clock_8h.md#a3d645146fe6742ed4d56ece6265fc6e2)
- ASPEED\_CLK\_UART10 : [ast10x0\_clock.h](ast10x0__clock_8h.md#afc181e59d2e1deca6af256d34d57e25c)
- ASPEED\_CLK\_UART11 : [ast10x0\_clock.h](ast10x0__clock_8h.md#adbd0d3f7c91d1281e785363095a48077)
- ASPEED\_CLK\_UART12 : [ast10x0\_clock.h](ast10x0__clock_8h.md#a7d6f4a6d172b574d4a28ff4b6777df69)
- ASPEED\_CLK\_UART13 : [ast10x0\_clock.h](ast10x0__clock_8h.md#ad2e83af2a4c95f211c9d5f65fb1991d7)
- ASPEED\_CLK\_UART2 : [ast10x0\_clock.h](ast10x0__clock_8h.md#a2c86ad831ad2d720edd3a9c63ad9acb3)
- ASPEED\_CLK\_UART3 : [ast10x0\_clock.h](ast10x0__clock_8h.md#a8d1afc478750f1746f2bd280ec6aff74)
- ASPEED\_CLK\_UART4 : [ast10x0\_clock.h](ast10x0__clock_8h.md#a5eb5ae4923c04c925b8763330ead0062)
- ASPEED\_CLK\_UART5 : [ast10x0\_clock.h](ast10x0__clock_8h.md#a9a92e4a9a3024f13c9ba2c73a73c2ddb)
- ASPEED\_CLK\_UART6 : [ast10x0\_clock.h](ast10x0__clock_8h.md#ab834e06518b4054ade5ad5f43971c262)
- ASPEED\_CLK\_UART7 : [ast10x0\_clock.h](ast10x0__clock_8h.md#a607209d0fc0eae0b7e16f9caf2e9266f)
- ASPEED\_CLK\_UART8 : [ast10x0\_clock.h](ast10x0__clock_8h.md#adde45b96aa4dfcacfe9830f0d18c08e7)
- ASPEED\_CLK\_UART9 : [ast10x0\_clock.h](ast10x0__clock_8h.md#a5a99a566a02c34e68a56d2953e885457)
- ASPEED\_CLK\_USB\_DEVICE : [ast10x0\_clock.h](ast10x0__clock_8h.md#a165a6862679163abf282c0eb67e94def)
- ASPEED\_CLK\_YCLK : [ast10x0\_clock.h](ast10x0__clock_8h.md#a74d307980b4aa1dcb0ad90c306d15448)
- ASPEED\_RESET\_ADC : [ast10x0\_reset.h](ast10x0__reset_8h.md#ac8cad68c9911554194574d460d3f3814)
- ASPEED\_RESET\_ESPI : [ast10x0\_reset.h](ast10x0__reset_8h.md#a76bc43a3b57f919db372e4a79dc79b6f)
- ASPEED\_RESET\_GRP\_0\_OFFSET : [ast10x0\_reset.h](ast10x0__reset_8h.md#a58f51601c877080d344167774969c9b4)
- ASPEED\_RESET\_GRP\_1\_OFFSET : [ast10x0\_reset.h](ast10x0__reset_8h.md#af60cf3c19df220966fcc6aeb553677a8)
- ASPEED\_RESET\_HACE : [ast10x0\_reset.h](ast10x0__reset_8h.md#a18a69d795a56e9077333b8d50fac36b0)
- ASPEED\_RESET\_I2C : [ast10x0\_reset.h](ast10x0__reset_8h.md#a235bf82edd62f2f72fb9de4efa11c7f9)
- ASPEED\_RESET\_I3C : [ast10x0\_reset.h](ast10x0__reset_8h.md#a49e0d2e074659166bb20ad0a9a603435)
- ASPEED\_RESET\_I3C0 : [ast10x0\_reset.h](ast10x0__reset_8h.md#a392ac704a9bbddcee588e9f52af8557e)
- ASPEED\_RESET\_I3C1 : [ast10x0\_reset.h](ast10x0__reset_8h.md#a792d63822aaf04bcf8670471c6f5cb5c)
- ASPEED\_RESET\_I3C2 : [ast10x0\_reset.h](ast10x0__reset_8h.md#a3e76867407846a68533e1ef13e5612e0)
- ASPEED\_RESET\_I3C3 : [ast10x0\_reset.h](ast10x0__reset_8h.md#a6eb1a65fee7f7d589e5c40acb06a59a7)
- ASPEED\_RESET\_JTAG\_M0 : [ast10x0\_reset.h](ast10x0__reset_8h.md#a2000c2cd1474abe2acf6716293f9a656)
- ASPEED\_RESET\_JTAG\_M1 : [ast10x0\_reset.h](ast10x0__reset_8h.md#a8e20719b17e4f21c9673a7e740362b8e)
- ASPEED\_RESET\_LPC : [ast10x0\_reset.h](ast10x0__reset_8h.md#a93f2fc81c8a9cdfee97548fb48281bed)
- ASPEED\_RESET\_MAC : [ast10x0\_reset.h](ast10x0__reset_8h.md#ae546e699360d23e89ddba7310d637c8a)
- ASPEED\_RESET\_MII : [ast10x0\_reset.h](ast10x0__reset_8h.md#abb494d1ccc9ab01d50fc21bb7c2eb7de)
- ASPEED\_RESET\_PECI : [ast10x0\_reset.h](ast10x0__reset_8h.md#a6cab61e115cc50636d3c5aa8b509f5c5)
- ASPEED\_RESET\_PWM\_TACH : [ast10x0\_reset.h](ast10x0__reset_8h.md#a49f53d3791ab6d0104837204c31eb1ad)
- ASPEED\_RESET\_SRAM : [ast10x0\_reset.h](ast10x0__reset_8h.md#a54fbdaa166cf43dadb6a4d9777b581c3)
- ASPEED\_RESET\_UART1 : [ast10x0\_reset.h](ast10x0__reset_8h.md#ab7429f58459c26d3cf637e4d9e764d67)
- ASPEED\_RESET\_UART2 : [ast10x0\_reset.h](ast10x0__reset_8h.md#a67087547f237de76d2ab1e9c2fd774f1)
- ASPEED\_RESET\_UART3 : [ast10x0\_reset.h](ast10x0__reset_8h.md#a31e0692dd65c0adbe937daebee4477e2)
- ASPEED\_RESET\_UART4 : [ast10x0\_reset.h](ast10x0__reset_8h.md#a19e6207b2212a0a58b8dc5c736748df1)
- ASPEED\_RESET\_USB : [ast10x0\_reset.h](ast10x0__reset_8h.md#aa63cefb88f641936f49389acaff04cbc)
- ASSERT : [linker-tool-mwdt.h](linker-tool-mwdt_8h.md#a0a3e46fec8345ab664843141b78b82a3)
- assert : [assert.h](assert_8h.md#ac88d9686b15e03eb62e2a66109845f86)
- ASSIST\_DEBUG\_INTR\_SOURCE : [esp-esp32c3-intmux.h](esp-esp32c3-intmux_8h.md#ab627766f8e6b851882c42596d7df540c), [esp-esp32c6-intmux.h](esp-esp32c6-intmux_8h.md#ab627766f8e6b851882c42596d7df540c), [esp32s2-xtensa-intmux.h](esp32s2-xtensa-intmux_8h.md#ab627766f8e6b851882c42596d7df540c), [esp32s3-xtensa-intmux.h](esp32s3-xtensa-intmux_8h.md#ab627766f8e6b851882c42596d7df540c)
- ASYNC : [stm32\_adc.h](stm32__adc_8h.md#ad28b60868b6548c43e7a18f30c9b2022)
- ASYNC\_RX\_BUF\_SIZE : [shell\_uart.h](shell__uart_8h.md#a4665a2c895ab7f1d51c2a206bbeae24a)
- AT\_CMD\_V250\_PROTOCOL : [usb\_cdc.h](usb__cdc_8h.md#aaf98d38c2b9c859cf86e281bb67f27b0)
- ATCGPIO100\_GPIO\_DEBOUNCE : [andestech-atcgpio100.h](andestech-atcgpio100_8h.md#ac2da1c070a96a2aa921035f21a6aff21)
- ATEXIT\_MAX : [posix\_features.h](posix__features_8h.md#abf407c2e796fa3e943acf18be72aa01d)
- ATOMIC\_BITMAP\_SIZE : [atomic.h](group__atomic__apis.md#gafac28874aaad3bcec72c693186e988cb)
- ATOMIC\_DEFINE : [atomic.h](group__atomic__apis.md#ga249c575db9764486197709b327f7370e)
- ATOMIC\_INIT : [atomic.h](group__atomic__apis.md#gaadfbba86627ee7eeb07e04f712550f73)
- ATOMIC\_PTR\_INIT : [atomic.h](group__atomic__apis.md#ga7366802f7b11d3c5f9487f4fea9fc4d7)
- ATTR\_MPU\_EXTMEM : [memory-attr-arm.h](memory-attr-arm_8h.md#ac7e9b3c506fd8ba0170c248cb681e347)
- ATTR\_MPU\_FLASH : [memory-attr-arm.h](memory-attr-arm_8h.md#a42ee73c11a945c9d636a3806d5bf7eb6)
- ATTR\_MPU\_IO : [memory-attr-arm.h](memory-attr-arm_8h.md#ac5fd54c9e182c46e6d48cd94713fb164)
- ATTR\_MPU\_PPB : [memory-attr-arm.h](memory-attr-arm_8h.md#a5d7a78767be0cff6b4c6523761cf3055)
- ATTR\_MPU\_RAM : [memory-attr-arm.h](memory-attr-arm_8h.md#a7da536df6516679b7256651cd76a3ce0)
- ATTR\_MPU\_RAM\_NOCACHE : [memory-attr-arm.h](memory-attr-arm_8h.md#a0539bc3fbc9a9ed421869b7a88bc01bf)
- ATTR\_RISCV\_AMO\_ARITHMETIC : [memory-attr-riscv.h](memory-attr-riscv_8h.md#af404c9544d1487688bf0a275c02cf80e)
- ATTR\_RISCV\_AMO\_LOGICAL : [memory-attr-riscv.h](memory-attr-riscv_8h.md#aed9286d69906a98892dd15602b747629)
- ATTR\_RISCV\_AMO\_SWAP : [memory-attr-riscv.h](memory-attr-riscv_8h.md#a5b3078bb1a6db09697ca57f47c31f0d0)
- ATTR\_RISCV\_IO\_IDEMPOTENT\_READ : [memory-attr-riscv.h](memory-attr-riscv_8h.md#a2e51b151a96c55c5a4ab63a265a93161)
- ATTR\_RISCV\_IO\_IDEMPOTENT\_WRITE : [memory-attr-riscv.h](memory-attr-riscv_8h.md#a9969de51c4a6ed2c6b332bf67b55820b)
- ATTR\_RISCV\_TYPE\_EMPTY : [memory-attr-riscv.h](memory-attr-riscv_8h.md#a4298e697fdee5155acc0dae339e8c7b0)
- ATTR\_RISCV\_TYPE\_IO : [memory-attr-riscv.h](memory-attr-riscv_8h.md#a7edefffaeae15842d748376348354e01)
- ATTR\_RISCV\_TYPE\_MAIN : [memory-attr-riscv.h](memory-attr-riscv_8h.md#a326a99ea398a6972b5f6412a619b7729)
- ATTR\_SW\_ALLOC\_CACHE : [memory-attr-sw.h](memory-attr-sw_8h.md#adccfc787238048f59167e5913bf74e41)
- ATTR\_SW\_ALLOC\_DMA : [memory-attr-sw.h](memory-attr-sw_8h.md#a92d7fb61ed72428bfaf9d397fb6c32c6)
- ATTR\_SW\_ALLOC\_NON\_CACHE : [memory-attr-sw.h](memory-attr-sw_8h.md#af308d88c0732fb69e96577c594ca1a48)
- ATTR\_XTENSA\_DATA\_RAM : [memory-attr-xtensa.h](memory-attr-xtensa_8h.md#ac22caa2071000be7deb736dd6340ac4c)
- ATTR\_XTENSA\_DATA\_ROM : [memory-attr-xtensa.h](memory-attr-xtensa_8h.md#a22e41d116f0a78fc13ed4d3f344e2490)
- ATTR\_XTENSA\_INSTR\_RAM : [memory-attr-xtensa.h](memory-attr-xtensa_8h.md#a674b85213c6aee2f9078c45d5e21bff3)
- ATTR\_XTENSA\_INSTR\_ROM : [memory-attr-xtensa.h](memory-attr-xtensa_8h.md#a4698c95aff86fd63ba1e35b7b195fa07)
- ATTR\_XTENSA\_XLMI : [memory-attr-xtensa.h](memory-attr-xtensa_8h.md#a2c2b3b4c4421e704ef7f015500a5fc53)
- AUDIO\_FUNCTION\_AUDIO\_VIDEO : [audio.h](dt-bindings_2usb_2audio_8h.md#a41078dde7492c94faccc78faef169aa4)
- AUDIO\_FUNCTION\_CONTROL\_PANEL : [audio.h](dt-bindings_2usb_2audio_8h.md#af1af19c6180d3384df89c900499e34a2)
- AUDIO\_FUNCTION\_CONVERTER : [audio.h](dt-bindings_2usb_2audio_8h.md#a3dbb5dfcdfc87881bf7d8948e9cd45c8)
- AUDIO\_FUNCTION\_DESKTOP\_SPEAKER : [audio.h](dt-bindings_2usb_2audio_8h.md#ad7607f93fa9510650051e3f28376a02a)
- AUDIO\_FUNCTION\_HEADSET : [audio.h](dt-bindings_2usb_2audio_8h.md#a06d56e1c795164b50d5c8a6c230793d9)
- AUDIO\_FUNCTION\_HOME\_THEATER : [audio.h](dt-bindings_2usb_2audio_8h.md#abe58fbbbb9797e1398692944877511a1)
- AUDIO\_FUNCTION\_IO\_BOX : [audio.h](dt-bindings_2usb_2audio_8h.md#aa8b3e55c7e6dd610a354af04e9cf3462)
- AUDIO\_FUNCTION\_MICROPHONE : [audio.h](dt-bindings_2usb_2audio_8h.md#a3879fde1219c850f73722d36985960fb)
- AUDIO\_FUNCTION\_MUSICAL\_INSTRUMENT : [audio.h](dt-bindings_2usb_2audio_8h.md#ab252ed82b632209fce6f1e9602f73a39)
- AUDIO\_FUNCTION\_OTHER : [audio.h](dt-bindings_2usb_2audio_8h.md#af2779ede0da5332a7a04f037c012d56c)
- AUDIO\_FUNCTION\_PRO\_AUDIO : [audio.h](dt-bindings_2usb_2audio_8h.md#a18e9fa9324fe789c2e759eeed69282ba)
- AUDIO\_FUNCTION\_SUBCLASS\_UNDEFINED : [audio.h](dt-bindings_2usb_2audio_8h.md#a473b6e15e022d8a22f9e1f41f7faeba2)
- AUDIO\_FUNCTION\_TELEPHONE : [audio.h](dt-bindings_2usb_2audio_8h.md#a4d9df2836001b65105cb9f9b5979e332)
- AUDIO\_FUNCTION\_VOICE\_SOUND\_RECORDER : [audio.h](dt-bindings_2usb_2audio_8h.md#a6900b280435b064f1f43bd0c83d79dc4)
- AUX\_MPU\_ATTR\_KE : [arc\_mpu.h](arc__mpu_8h.md#ad5a4cc46b1ebb1e6446ac4c47a73a9e4)
- AUX\_MPU\_ATTR\_KR : [arc\_mpu.h](arc__mpu_8h.md#a22e4bcde2d658fa56547f33e06528808)
- AUX\_MPU\_ATTR\_KW : [arc\_mpu.h](arc__mpu_8h.md#af04748698a580d965f022feff3305451)
- AUX\_MPU\_ATTR\_N : [arc\_mpu.h](arc__mpu_8h.md#a03a96c3795cd1aa145f77a26b59812ab)
- AUX\_MPU\_ATTR\_S : [arc\_mpu.h](arc__mpu_8h.md#a5b508144ec92ab7f0fc96849e3ef0825)
- AUX\_MPU\_ATTR\_UE : [arc\_mpu.h](arc__mpu_8h.md#a60ee20e3975aded266f071b5153f1182)
- AUX\_MPU\_ATTR\_UR : [arc\_mpu.h](arc__mpu_8h.md#ab35d3ffeca1f3ca004e3952bd667f017)
- AUX\_MPU\_ATTR\_UW : [arc\_mpu.h](arc__mpu_8h.md#af51359c9aec81469777457d74f465e48)
- AUXDISPLAY\_LIGHT\_NOT\_SUPPORTED : [auxdisplay.h](group__auxdisplay__interface.md#ga0bd1d97b360f3138887a5e3e4729e01b)
- AXP192\_DCDC\_MODE\_AUTO : [axp192.h](group__regulator__axp192.md#ga08c7dbe4ab36c27901f7d6a513fe962c)
- AXP192\_DCDC\_MODE\_PWM : [axp192.h](group__regulator__axp192.md#gaeca7433bdd315f8ae1a218adcb972445)
- AXP192\_GPIO\_FUNC\_VALID : [axp192.h](drivers_2mfd_2axp192_8h.md#a61d7d88bead4733fedcbfb70f8ada464)
- AXP192\_GPIO\_MAX\_NUM : [axp192.h](drivers_2mfd_2axp192_8h.md#a0df71981c80a3c46e168287c39df88ee)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.7.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
